@@ -1,22 +1,26 @@
 package mekanism.common.integration.crafttweaker.example.component;
 
+import com.google.gson.JsonObject;
 import it.unimi.dsi.fastutil.objects.Object2BooleanArrayMap;
 import it.unimi.dsi.fastutil.objects.Object2BooleanMap;
 import java.lang.annotation.Annotation;
+import java.lang.invoke.MethodType;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
+import java.lang.reflect.ParameterizedType;
+import java.lang.reflect.Type;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
-import mekanism.api.functions.TriConsumer;
+import javax.annotation.Nullable;
 import mekanism.common.integration.crafttweaker.example.BaseCrTExampleProvider;
 import mekanism.common.integration.crafttweaker.example.CrTExampleBuilder;
-import mekanism.common.integration.crafttweaker.recipe.MekanismRecipeManager;
+import mekanism.common.integration.crafttweaker.recipe.manager.MekanismRecipeManager;
+import mekanism.common.util.MekanismUtils;
 import org.openzen.zencode.java.ZenCodeType;
 
 public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBuilder<BUILDER_TYPE>> extends CrTBaseExampleRecipeComponent {
@@ -42,8 +46,8 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
                 usedMethodNames.put(methodName, true);
                 int optionalParameterCount = 0;
                 Parameter[] methodParameters = method.getParameters();
-                List<String> parameterNames = lookupParameterNames(recipeManagerClass, methodName, methodParameters);
-                LinkedHashMap<String, Class<?>> parameters = new LinkedHashMap<>();
+                List<String> parameterNames = lookupParameterNames(recipeManagerClass, method);
+                LinkedHashMap<String, ParameterData> parameters = new LinkedHashMap<>();
                 for (int i = 0; i < methodParameters.length; i++) {
                     Parameter parameter = methodParameters[i];
                     if (hasOptionalAnnotation(parameter)) {
@@ -56,7 +60,7 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
                 methods.add(new RecipeMethod(methodName, parameters));
                 //First we build it up with no optionals excluded, and then we go through and create the other possible combinations
                 for (int i = 1; i <= optionalParameterCount; i++) {
-                    LinkedHashMap<String, Class<?>> reducedParameters = new LinkedHashMap<>();
+                    LinkedHashMap<String, ParameterData> reducedParameters = new LinkedHashMap<>();
                     for (int j = 0; j < methodParameters.length - i; j++) {
                         addParameter(reducedParameters, parameterNames, methodParameters[j], j);
                     }
@@ -65,7 +69,7 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
             }
         }
         List<String> missingMethods = usedMethodNames.object2BooleanEntrySet().stream()
-              .filter(entry -> !entry.getBooleanValue()).map(Map.Entry::getKey).collect(Collectors.toList());
+              .filter(entry -> !entry.getBooleanValue()).map(Map.Entry::getKey).toList();
         if (!missingMethods.isEmpty()) {
             throw new RuntimeException("Recipe manager: '" + recipeManagerClass.getSimpleName() + "' does not contain any implementations for methods with names: ["
                                        + String.join(", ", missingMethods) + "].");
@@ -75,31 +79,30 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
               .thenComparingInt((RecipeMethod method) -> method.parameterTypes.size())
               .thenComparing((RecipeMethod method) -> {
                   StringBuilder pseudoPath = new StringBuilder();
-                  for (Class<?> parameterType : method.parameterTypes) {
-                      pseudoPath.append(parameterType.getName());
+                  for (ParameterData parameterType : method.parameterTypes) {
+                      pseudoPath.append(parameterType.type().getName());
                   }
                   return pseudoPath.toString();
               }));
     }
 
-    private static List<String> lookupParameterNames(Class<?> clazz, String methodName, Parameter[] methodParameters) {
-        StringBuilder stringBuilder = new StringBuilder(methodName);
-        stringBuilder.append('(');
-        for (Parameter methodParameter : methodParameters) {
-            stringBuilder.append(methodParameter.getType().getName()).append(';');
-        }
-        stringBuilder.append(')');
-        String key = stringBuilder.toString().replaceAll("\\$", ".");
-        List<String> parameterNames = getParameterNames(clazz, key);
+    private static List<String> lookupParameterNames(Class<?> clazz, Method method) {
+        String signature = MethodType.methodType(method.getReturnType(), method.getParameterTypes()).descriptorString();
+        String methodName = method.getName();
+        List<String> parameterNames = getParameterNames(clazz, methodName, signature);
         while (parameterNames.isEmpty() && clazz.getSuperclass() != null) {
             clazz = clazz.getSuperclass();
-            parameterNames = getParameterNames(clazz, key);
+            parameterNames = getParameterNames(clazz, methodName, signature);
         }
         return parameterNames;
     }
 
-    private static List<String> getParameterNames(Class<?> clazz, String method) {
-        return BaseCrTExampleProvider.PARAMETER_NAMES.getOrDefault(clazz.getName(), Collections.emptyMap()).getOrDefault(method, Collections.emptyList());
+    private static List<String> getParameterNames(Class<?> clazz, String method, String signature) {
+        if (BaseCrTExampleProvider.PARAMETER_NAMES == null) {
+            return Collections.emptyList();
+        }
+        JsonObject classMethods = BaseCrTExampleProvider.PARAMETER_NAMES.getAsJsonObject(clazz.getName());
+        return MekanismUtils.getParameterNames(classMethods, method, signature);
     }
 
     public CrTExampleRecipeComponentBuilder<BUILDER_TYPE> addExample(Object... params) {
@@ -115,9 +118,11 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
             if (typeCount == params.length) {
                 boolean matches = true;
                 for (int i = 0; i < typeCount; i++) {
-                    Class<?> expected = method.parameterTypes.get(i);
+                    ParameterData expectedData = method.parameterTypes.get(i);
+                    Class<?> expected = expectedData.type();
                     Class<?> actual = paramTypes.get(i);
-                    if (!expected.isAssignableFrom(actual) && !parent.getExampleProvider().supportsConversion(expected, actual)) {
+                    //TODO: Add in some way to validate the actual against the generic class
+                    if (!expected.isAssignableFrom(actual) && !parent.getExampleProvider().supportsConversion(expected, expectedData.generic, actual)) {
                         matches = false;
                         break;
                     }
@@ -140,10 +145,16 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
         for (RecipeMethod method : methods) {
             stringBuilder.append("// ");
             appendRecipeMethodStart(stringBuilder, method.methodName);
-            method.appendParameters(stringBuilder, (sb, name, type) -> sb
-                  .append(name)
-                  .append(" as ")
-                  .append(parent.getExampleProvider().getCrTClassName(type)));
+            method.appendParameters(stringBuilder, (sb, name, type, generic) -> {
+                sb.append(name)
+                      .append(" as ")
+                      .append(parent.getExampleProvider().getCrTClassName(type));
+                if (generic != null) {
+                    sb.append('<')
+                          .append(parent.getExampleProvider().getCrTClassName(generic))
+                          .append('>');
+                }
+            });
             stringBuilder.append(")\n");
         }
         //And an extra newline before implementations
@@ -157,8 +168,9 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
                 List<String>[] parameterRepresentations = new List[paramCount];
                 for (int i = 0; i < paramCount; i++) {
                     Object exampleParam = example.params[i];
-                    List<String> representations = parent.getExampleProvider().getConversionRepresentations(example.method.parameterTypes.get(i), parent.getImports(),
-                          exampleParam);
+                    ParameterData parameterData = example.method.parameterTypes.get(i);
+                    List<String> representations = parent.getExampleProvider().getConversionRepresentations(parameterData.type, parameterData.generic,
+                          parent.getImports(), exampleParam);
                     if (representations.isEmpty()) {
                         throw new RuntimeException("No matching representations found for parameter " + i + " of type " + exampleParam.getClass().getSimpleName());
                     }
@@ -243,17 +255,23 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
             if (!method.hasExample) {
                 StringBuilder signature = new StringBuilder(method.methodName);
                 signature.append("(");
-                method.appendParameters(signature, (sb, name, type) -> sb
-                      .append(type.getSimpleName())
-                      .append(' ')
-                      .append(name));
+                method.appendParameters(signature, (sb, name, type, generic) -> {
+                    sb.append(type.getSimpleName())
+                          .append(' ')
+                          .append(name);
+                    if (generic != null) {
+                        sb.append('<')
+                              .append(generic.getSimpleName())
+                              .append('>');
+                    }
+                });
                 signature.append(")");
                 throw new RuntimeException("Recipe method: '" + signature + "' has no example usage declared.");
             }
         }
     }
 
-    private void addParameter(LinkedHashMap<String, Class<?>> parameters, List<String> parameterNames, Parameter parameter, int index) {
+    private void addParameter(LinkedHashMap<String, ParameterData> parameters, List<String> parameterNames, Parameter parameter, int index) {
         String name;
         if (index < parameterNames.size()) {
             name = parameterNames.get(index);
@@ -261,7 +279,7 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
             //Fallback to generated name
             name = parameter.getName();
         }
-        parameters.put(name, parameter.getType());
+        parameters.put(name, ParameterData.create(parameter.getType(), parameter.getParameterizedType()));
     }
 
     private boolean isZCMethod(Method method) {
@@ -288,36 +306,49 @@ public class CrTExampleRecipeComponentBuilder<BUILDER_TYPE extends CrTExampleBui
     private static class RecipeMethod {
 
         private final List<String> parameterNames = new ArrayList<>();
-        private final List<Class<?>> parameterTypes = new ArrayList<>();
+        private final List<ParameterData> parameterTypes = new ArrayList<>();
         private final String methodName;
         private boolean hasExample;
 
-        public RecipeMethod(String methodName, LinkedHashMap<String, Class<?>> parameters) {
+        public RecipeMethod(String methodName, LinkedHashMap<String, ParameterData> parameters) {
             this.methodName = methodName;
-            for (Map.Entry<String, Class<?>> entry : parameters.entrySet()) {
+            for (Map.Entry<String, ParameterData> entry : parameters.entrySet()) {
                 parameterNames.add(entry.getKey());
                 parameterTypes.add(entry.getValue());
             }
         }
 
-        private void appendParameters(StringBuilder stringBuilder, TriConsumer<StringBuilder, String, Class<?>> parameterWriter) {
+        private void appendParameters(StringBuilder stringBuilder, ParameterWriter parameterWriter) {
             for (int i = 0, count = parameterNames.size(); i < count; i++) {
                 if (i != 0) {
                     stringBuilder.append(", ");
                 }
-                parameterWriter.accept(stringBuilder, parameterNames.get(i), parameterTypes.get(i));
+                ParameterData parameterData = parameterTypes.get(i);
+                parameterWriter.write(stringBuilder, parameterNames.get(i), parameterData.type(), parameterData.generic());
             }
         }
     }
 
-    private static class RecipeExample {
+    @FunctionalInterface
+    private interface ParameterWriter {
 
-        private final RecipeMethod method;
-        private final Object[] params;
+        void write(StringBuilder sb, String name, Class<?> type, @Nullable Class<?> genericType);
+    }
 
-        public RecipeExample(RecipeMethod method, Object[] params) {
-            this.method = method;
-            this.params = params;
+    private record ParameterData(Class<?> type, @Nullable Class<?> generic) {
+
+        public static ParameterData create(Class<?> type, Type generic) {
+            //TODO: Improve the support of generics
+            if (generic instanceof ParameterizedType parameterizedType) {
+                Type[] arguments = parameterizedType.getActualTypeArguments();
+                if (arguments.length == 1 && arguments[0] instanceof Class<?> genericClass) {
+                    return new ParameterData(type, genericClass);
+                }
+            }
+            return new ParameterData(type, null);
         }
+    }
+
+    private record RecipeExample(RecipeMethod method, Object[] params) {
     }
 }
