@@ -1,12 +1,8 @@
 package mekanism.client.jei.machine;
 
-import com.mojang.blaze3d.matrix.MatrixStack;
-import java.util.Collections;
+import com.mojang.blaze3d.vertex.PoseStack;
 import java.util.HashSet;
-import java.util.Map;
 import java.util.Set;
-import java.util.WeakHashMap;
-import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import mekanism.api.chemical.ChemicalStack;
@@ -14,11 +10,11 @@ import mekanism.api.chemical.merged.BoxedChemicalStack;
 import mekanism.api.chemical.slurry.Slurry;
 import mekanism.api.chemical.slurry.SlurryStack;
 import mekanism.api.recipes.ChemicalCrystallizerRecipe;
-import mekanism.api.recipes.inputs.chemical.GasStackIngredient;
-import mekanism.api.recipes.inputs.chemical.IChemicalStackIngredient;
-import mekanism.api.recipes.inputs.chemical.InfusionStackIngredient;
-import mekanism.api.recipes.inputs.chemical.PigmentStackIngredient;
-import mekanism.api.recipes.inputs.chemical.SlurryStackIngredient;
+import mekanism.api.recipes.ingredients.ChemicalStackIngredient;
+import mekanism.api.recipes.ingredients.ChemicalStackIngredient.GasStackIngredient;
+import mekanism.api.recipes.ingredients.ChemicalStackIngredient.InfusionStackIngredient;
+import mekanism.api.recipes.ingredients.ChemicalStackIngredient.PigmentStackIngredient;
+import mekanism.api.recipes.ingredients.ChemicalStackIngredient.SlurryStackIngredient;
 import mekanism.client.gui.element.GuiInnerScreen;
 import mekanism.client.gui.element.gauge.GaugeType;
 import mekanism.client.gui.element.gauge.GuiGasGauge;
@@ -30,35 +26,39 @@ import mekanism.client.gui.machine.GuiChemicalCrystallizer;
 import mekanism.client.gui.machine.GuiChemicalCrystallizer.IOreInfo;
 import mekanism.client.jei.BaseRecipeCategory;
 import mekanism.client.jei.MekanismJEI;
+import mekanism.client.jei.MekanismJEIRecipeType;
 import mekanism.common.inventory.container.slot.SlotOverlay;
 import mekanism.common.registries.MekanismBlocks;
 import mekanism.common.tags.MekanismTags;
+import mekanism.common.tags.TagUtils;
 import mekanism.common.tile.component.config.DataType;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
-import mezz.jei.api.gui.ingredient.IGuiIngredient;
-import mezz.jei.api.gui.ingredient.IGuiIngredientGroup;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
+import mezz.jei.api.gui.ingredient.IRecipeSlotView;
+import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.ingredients.IIngredientType;
-import mezz.jei.api.ingredients.IIngredients;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.tags.ITag;
+import mezz.jei.api.ingredients.ITypedIngredient;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
+import net.minecraft.tags.TagKey;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraftforge.registries.ForgeRegistries;
+import net.minecraftforge.registries.tags.ITag;
 
 public class ChemicalCrystallizerRecipeCategory extends BaseRecipeCategory<ChemicalCrystallizerRecipe> {
 
-    //Note: We use a weak hashmap so that when the recipe stops existing either due to disconnecting from the server
-    // or because of a reload, then it can be properly garbage collected, but until then we keep track of the pairing
-    // between the recipe and the ingredient group JEI has so that we can ensure we draw the correct information
-    private final Map<ChemicalCrystallizerRecipe, IngredientTarget> ingredients = new WeakHashMap<>();
+    private static final String CHEMICAL_INPUT = "chemicalInput";
+    private static final String DISPLAYED_ITEM = "displayedItem";
+
     private final OreInfo oreInfo = new OreInfo();
     private final GuiGauge<?> gauge;
     private final GuiSlot output;
     private final GuiSlot slurryOreSlot;
 
-    public ChemicalCrystallizerRecipeCategory(IGuiHelper helper) {
-        super(helper, MekanismBlocks.CHEMICAL_CRYSTALLIZER, 5, 3, 147, 79);
+    public ChemicalCrystallizerRecipeCategory(IGuiHelper helper, MekanismJEIRecipeType<ChemicalCrystallizerRecipe> recipeType) {
+        super(helper, recipeType, MekanismBlocks.CHEMICAL_CRYSTALLIZER, 5, 3, 147, 79);
         gauge = addElement(GuiGasGauge.getDummy(GaugeType.STANDARD.with(DataType.INPUT), this, 7, 4));
         addSlot(SlotType.INPUT, 8, 65).with(SlotOverlay.PLUS);
         output = addSlot(SlotType.OUTPUT, 129, 57);
@@ -68,92 +68,54 @@ public class ChemicalCrystallizerRecipeCategory extends BaseRecipeCategory<Chemi
     }
 
     @Override
-    public Class<? extends ChemicalCrystallizerRecipe> getRecipeClass() {
-        return ChemicalCrystallizerRecipe.class;
-    }
-
-    @Override
-    public void draw(ChemicalCrystallizerRecipe recipe, MatrixStack matrixStack, double mouseX, double mouseY) {
+    public void draw(ChemicalCrystallizerRecipe recipe, IRecipeSlotsView recipeSlotsView, PoseStack matrixStack, double mouseX, double mouseY) {
         //Set what the "current" recipe is for our ore info
         oreInfo.currentRecipe = recipe;
-        IngredientTarget target = ingredients.get(recipe);
-        if (target != null) {
-            oreInfo.ingredient = target.ingredientGroup.getGuiIngredients().get(0);
-            oreInfo.itemIngredient = target.itemIngredientGroup == null ? null : target.itemIngredientGroup.getGuiIngredients().get(1);
-        }
-        super.draw(recipe, matrixStack, mouseX, mouseY);
+        oreInfo.ingredient = (ChemicalStack<?>) recipeSlotsView.findSlotByName(CHEMICAL_INPUT)
+              .flatMap(IRecipeSlotView::getDisplayedIngredient)
+              .map(ITypedIngredient::getIngredient)
+              .filter(ingredient -> ingredient instanceof ChemicalStack)
+              .orElse(null);
+        oreInfo.itemIngredient = getDisplayedStack(recipeSlotsView, DISPLAYED_ITEM, VanillaTypes.ITEM_STACK, ItemStack.EMPTY);
+        super.draw(recipe, recipeSlotsView, matrixStack, mouseX, mouseY);
         oreInfo.currentRecipe = null;
         oreInfo.ingredient = null;
-        oreInfo.itemIngredient = null;
+        oreInfo.itemIngredient = ItemStack.EMPTY;
     }
 
     @Override
-    public void setIngredients(ChemicalCrystallizerRecipe recipe, IIngredients ingredients) {
-        IChemicalStackIngredient<?, ?> input = recipe.getInput();
-        if (input instanceof GasStackIngredient) {
-            ingredients.setInputLists(MekanismJEI.TYPE_GAS, Collections.singletonList(((GasStackIngredient) input).getRepresentations()));
-        } else if (input instanceof InfusionStackIngredient) {
-            ingredients.setInputLists(MekanismJEI.TYPE_INFUSION, Collections.singletonList(((InfusionStackIngredient) input).getRepresentations()));
-        } else if (input instanceof PigmentStackIngredient) {
-            ingredients.setInputLists(MekanismJEI.TYPE_PIGMENT, Collections.singletonList(((PigmentStackIngredient) input).getRepresentations()));
-        } else if (input instanceof SlurryStackIngredient) {
-            ingredients.setInputLists(MekanismJEI.TYPE_SLURRY, Collections.singletonList(((SlurryStackIngredient) input).getRepresentations()));
-        }
-        ingredients.setOutputLists(VanillaTypes.ITEM, Collections.singletonList(recipe.getOutputDefinition()));
-    }
-
-    @Override
-    public void setRecipe(IRecipeLayout recipeLayout, ChemicalCrystallizerRecipe recipe, IIngredients ingredients) {
-        IGuiItemStackGroup itemStacks = recipeLayout.getItemStacks();
-        initItem(itemStacks, 0, false, output, recipe.getOutputDefinition());
-        IChemicalStackIngredient<?, ?> input = recipe.getInput();
-        if (input instanceof GasStackIngredient) {
-            initChemical(recipeLayout, recipe, MekanismJEI.TYPE_GAS, (GasStackIngredient) input, null);
-        } else if (input instanceof InfusionStackIngredient) {
-            initChemical(recipeLayout, recipe, MekanismJEI.TYPE_INFUSION, (InfusionStackIngredient) input, null);
-        } else if (input instanceof PigmentStackIngredient) {
-            initChemical(recipeLayout, recipe, MekanismJEI.TYPE_PIGMENT, (PigmentStackIngredient) input, null);
-        } else if (input instanceof SlurryStackIngredient) {
-            SlurryStackIngredient slurryInput = (SlurryStackIngredient) input;
+    public void setRecipe(@Nonnull IRecipeLayoutBuilder builder, ChemicalCrystallizerRecipe recipe, @Nonnull IFocusGroup focusGroup) {
+        initItem(builder, RecipeIngredientRole.OUTPUT, output, recipe.getOutputDefinition());
+        ChemicalStackIngredient<?, ?> input = recipe.getInput();
+        if (input instanceof GasStackIngredient ingredient) {
+            initChemical(builder, MekanismJEI.TYPE_GAS, ingredient);
+        } else if (input instanceof InfusionStackIngredient ingredient) {
+            initChemical(builder, MekanismJEI.TYPE_INFUSION, ingredient);
+        } else if (input instanceof PigmentStackIngredient ingredient) {
+            initChemical(builder, MekanismJEI.TYPE_PIGMENT, ingredient);
+        } else if (input instanceof SlurryStackIngredient ingredient) {
+            initChemical(builder, MekanismJEI.TYPE_SLURRY, ingredient);
             Set<ITag<Item>> tags = new HashSet<>();
-            for (SlurryStack slurryStack : slurryInput.getRepresentations()) {
+            for (SlurryStack slurryStack : ingredient.getRepresentations()) {
                 Slurry slurry = slurryStack.getType();
-                if (!slurry.isIn(MekanismTags.Slurries.DIRTY)) {
-                    ITag<Item> oreTag = slurry.getOreTag();
+                if (!MekanismTags.Slurries.DIRTY_LOOKUP.contains(slurry)) {
+                    TagKey<Item> oreTag = slurry.getOreTag();
                     if (oreTag != null) {
-                        tags.add(oreTag);
+                        tags.add(TagUtils.tag(ForgeRegistries.ITEMS, oreTag));
                     }
                 }
             }
             if (tags.size() == 1) {
-                initChemical(recipeLayout, recipe, MekanismJEI.TYPE_SLURRY, slurryInput, itemStacks);
                 //TODO: Eventually come up with a better way to do this to allow for if there outputs based on the input and multiple input types
-                tags.stream().findFirst().ifPresent(tag -> initItem(itemStacks, 1, false, slurryOreSlot,
-                      tag.getValues().stream().map(ItemStack::new).collect(Collectors.toList())));
-            } else {
-                initChemical(recipeLayout, recipe, MekanismJEI.TYPE_SLURRY, slurryInput, null);
+                tags.stream().findFirst().ifPresent(tag -> initItem(builder, RecipeIngredientRole.RENDER_ONLY, slurryOreSlot,
+                      tag.stream().map(ItemStack::new).toList()).setSlotName(DISPLAYED_ITEM));
             }
         }
     }
 
-    private <STACK extends ChemicalStack<?>> void initChemical(IRecipeLayout recipeLayout, ChemicalCrystallizerRecipe recipe, IIngredientType<STACK> type,
-          IChemicalStackIngredient<?, STACK> ingredient, @Nullable IGuiItemStackGroup itemIngredientGroup) {
-        IGuiIngredientGroup<STACK> stacks = recipeLayout.getIngredientsGroup(type);
-        initChemical(stacks, 0, true, gauge, ingredient.getRepresentations());
-        this.ingredients.put(recipe, new IngredientTarget(stacks, itemIngredientGroup));
-    }
-
-    //TODO - 1.18: Make this a record
-    private static class IngredientTarget {
-
-        private final IGuiIngredientGroup<? extends ChemicalStack<?>> ingredientGroup;
-        @Nullable
-        private final IGuiItemStackGroup itemIngredientGroup;
-
-        public IngredientTarget(IGuiIngredientGroup<? extends ChemicalStack<?>> ingredientGroup, @Nullable IGuiItemStackGroup itemIngredientGroup) {
-            this.ingredientGroup = ingredientGroup;
-            this.itemIngredientGroup = itemIngredientGroup;
-        }
+    private <STACK extends ChemicalStack<?>> void initChemical(IRecipeLayoutBuilder builder, IIngredientType<STACK> type, ChemicalStackIngredient<?, STACK> ingredient) {
+        initChemical(builder, type, RecipeIngredientRole.INPUT, gauge, ingredient.getRepresentations())
+              .setSlotName(CHEMICAL_INPUT);
     }
 
     private static class OreInfo implements IOreInfo {
@@ -161,18 +123,16 @@ public class ChemicalCrystallizerRecipeCategory extends BaseRecipeCategory<Chemi
         @Nullable
         private ChemicalCrystallizerRecipe currentRecipe;
         @Nullable
-        private IGuiIngredient<? extends ChemicalStack<?>> ingredient;
-        @Nullable
-        private IGuiIngredient<ItemStack> itemIngredient;
+        private ChemicalStack<?> ingredient;
+        private ItemStack itemIngredient = ItemStack.EMPTY;
 
         @Nonnull
         @Override
         public BoxedChemicalStack getInputChemical() {
-            if (ingredient == null) {
+            if (ingredient == null || ingredient.isEmpty()) {
                 return BoxedChemicalStack.EMPTY;
             }
-            ChemicalStack<?> displayedIngredient = ingredient.getDisplayedIngredient();
-            return displayedIngredient == null || displayedIngredient.isEmpty() ? BoxedChemicalStack.EMPTY : BoxedChemicalStack.box(displayedIngredient);
+            return BoxedChemicalStack.box(ingredient);
         }
 
         @Nullable
@@ -181,14 +141,10 @@ public class ChemicalCrystallizerRecipeCategory extends BaseRecipeCategory<Chemi
             return currentRecipe;
         }
 
-        @Override
         @Nonnull
+        @Override
         public ItemStack getRenderStack() {
-            if (itemIngredient == null) {
-                return ItemStack.EMPTY;
-            }
-            ItemStack displayedIngredient = itemIngredient.getDisplayedIngredient();
-            return displayedIngredient == null ? ItemStack.EMPTY : displayedIngredient;
+            return itemIngredient;
         }
     }
 }
