@@ -1,7 +1,7 @@
 package mekanism.client.jei.machine;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import javax.annotation.Nonnull;
 import mekanism.api.heat.HeatAPI;
 import mekanism.api.recipes.FluidToFluidRecipe;
 import mekanism.client.gui.element.GuiDownArrow;
@@ -12,25 +12,25 @@ import mekanism.client.gui.element.gauge.GuiFluidGauge;
 import mekanism.client.gui.element.gauge.GuiGauge;
 import mekanism.client.gui.element.slot.SlotType;
 import mekanism.client.jei.BaseRecipeCategory;
+import mekanism.client.jei.MekanismJEIRecipeType;
 import mekanism.common.MekanismLang;
 import mekanism.common.content.evaporation.EvaporationMultiblockData;
 import mekanism.common.registries.MekanismBlocks;
 import mekanism.common.util.MekanismUtils;
 import mekanism.common.util.UnitDisplayUtils.TemperatureUnit;
-import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
-import mezz.jei.api.gui.ingredient.IGuiFluidStackGroup;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
 
 public class FluidToFluidRecipeCategory extends BaseRecipeCategory<FluidToFluidRecipe> {
 
     private final GuiGauge<?> input;
     private final GuiGauge<?> output;
 
-    public FluidToFluidRecipeCategory(IGuiHelper helper) {
-        super(helper, MekanismBlocks.THERMAL_EVAPORATION_CONTROLLER, 3, 12, 170, 62);
-        addElement(new GuiInnerScreen(this, 48, 19, 80, 40, () -> Arrays.asList(
+    public FluidToFluidRecipeCategory(IGuiHelper helper, MekanismJEIRecipeType<FluidToFluidRecipe> recipeType) {
+        super(helper, recipeType, MekanismBlocks.THERMAL_EVAPORATION_CONTROLLER, 3, 12, 170, 62);
+        addElement(new GuiInnerScreen(this, 48, 19, 80, 40, () -> List.of(
               MekanismLang.MULTIBLOCK_FORMED.translate(), MekanismLang.EVAPORATION_HEIGHT.translate(EvaporationMultiblockData.MAX_HEIGHT),
               MekanismLang.TEMPERATURE.translate(MekanismUtils.getTemperatureDisplay(HeatAPI.AMBIENT_TEMP, TemperatureUnit.KELVIN, true)),
               MekanismLang.FLUID_PRODUCTION.translate(0.0))
@@ -47,20 +47,8 @@ public class FluidToFluidRecipeCategory extends BaseRecipeCategory<FluidToFluidR
     }
 
     @Override
-    public Class<? extends FluidToFluidRecipe> getRecipeClass() {
-        return FluidToFluidRecipe.class;
-    }
-
-    @Override
-    public void setIngredients(FluidToFluidRecipe recipe, IIngredients ingredients) {
-        ingredients.setInputLists(VanillaTypes.FLUID, Collections.singletonList(recipe.getInput().getRepresentations()));
-        ingredients.setOutputLists(VanillaTypes.FLUID, Collections.singletonList(recipe.getOutputDefinition()));
-    }
-
-    @Override
-    public void setRecipe(IRecipeLayout recipeLayout, FluidToFluidRecipe recipe, IIngredients ingredients) {
-        IGuiFluidStackGroup fluidStacks = recipeLayout.getFluidStacks();
-        initFluid(fluidStacks, 0, true, input, recipe.getInput().getRepresentations());
-        initFluid(fluidStacks, 1, false, output, recipe.getOutputDefinition());
+    public void setRecipe(@Nonnull IRecipeLayoutBuilder builder, FluidToFluidRecipe recipe, @Nonnull IFocusGroup focusGroup) {
+        initFluid(builder, RecipeIngredientRole.INPUT, input, recipe.getInput().getRepresentations());
+        initFluid(builder, RecipeIngredientRole.OUTPUT, output, recipe.getOutputDefinition());
     }
 }
