@@ -3,7 +3,7 @@ package mekanism.client.model.baked;
 import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
-import com.mojang.blaze3d.matrix.MatrixStack;
+import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.datafixers.util.Pair;
 import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import java.util.List;
@@ -11,36 +11,36 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Random;
 import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import mekanism.client.render.lib.QuadTransformation;
 import mekanism.client.render.lib.QuadUtils;
-import net.minecraft.block.BlockState;
 import net.minecraft.client.renderer.RenderType;
-import net.minecraft.client.renderer.model.BakedQuad;
-import net.minecraft.client.renderer.model.IBakedModel;
-import net.minecraft.client.renderer.model.ItemCameraTransforms;
-import net.minecraft.client.renderer.model.ItemOverrideList;
+import net.minecraft.client.renderer.block.model.BakedQuad;
+import net.minecraft.client.renderer.block.model.ItemOverrides;
+import net.minecraft.client.renderer.block.model.ItemTransforms;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
-import net.minecraft.item.ItemStack;
-import net.minecraft.util.Direction;
+import net.minecraft.client.resources.model.BakedModel;
+import net.minecraft.core.Direction;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.block.state.BlockState;
 import net.minecraftforge.client.MinecraftForgeClient;
 import net.minecraftforge.client.model.data.IModelData;
 
-public class ExtensionBakedModel<T> implements IBakedModel {
+public class ExtensionBakedModel<T> implements BakedModel {
 
-    protected final IBakedModel original;
+    protected final BakedModel original;
 
-    private final LoadingCache<QuadsKey<T>, List<BakedQuad>> cache = CacheBuilder.newBuilder().build(new CacheLoader<QuadsKey<T>, List<BakedQuad>>() {
+    private final LoadingCache<QuadsKey<T>, List<BakedQuad>> cache = CacheBuilder.newBuilder().build(new CacheLoader<>() {
+        @Nonnull
         @Override
         public List<BakedQuad> load(@Nonnull QuadsKey<T> key) {
             return createQuads(key);
         }
     });
-    private final Map<List<Pair<IBakedModel, RenderType>>, List<Pair<IBakedModel, RenderType>>> cachedLayerRedirects = new Object2ObjectOpenHashMap<>();
+    private final Map<List<Pair<BakedModel, RenderType>>, List<Pair<BakedModel, RenderType>>> cachedLayerRedirects = new Object2ObjectOpenHashMap<>();
 
-    public ExtensionBakedModel(IBakedModel original) {
+    public ExtensionBakedModel(BakedModel original) {
         this.original = original;
     }
 
@@ -80,19 +80,19 @@ public class ExtensionBakedModel<T> implements IBakedModel {
 
     @Nonnull
     @Override
-    public ItemOverrideList getOverrides() {
+    public ItemOverrides getOverrides() {
         return original.getOverrides();
     }
 
     @Override
-    public IBakedModel handlePerspective(ItemCameraTransforms.TransformType cameraTransformType, MatrixStack mat) {
+    public BakedModel handlePerspective(ItemTransforms.TransformType cameraTransformType, PoseStack mat) {
         return original.handlePerspective(cameraTransformType, mat);
     }
 
     @Nonnull
     @Override
     @Deprecated
-    public ItemCameraTransforms getTransforms() {
+    public ItemTransforms getTransforms() {
         return original.getTransforms();
     }
 
@@ -118,7 +118,7 @@ public class ExtensionBakedModel<T> implements IBakedModel {
     @Override
     public List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction side, @Nonnull Random rand, @Nonnull IModelData data) {
         List<BakedQuad> quads = original.getQuads(state, side, rand, data);
-        QuadsKey<T> key = createKey(new QuadsKey<>(state, side, rand, MinecraftForgeClient.getRenderLayer(), quads), data);
+        QuadsKey<T> key = createKey(new QuadsKey<>(state, side, rand, MinecraftForgeClient.getRenderType(), quads), data);
         if (key == null) {
             return quads;
         }
@@ -132,24 +132,24 @@ public class ExtensionBakedModel<T> implements IBakedModel {
 
     @Nonnull
     @Override
-    public List<Pair<IBakedModel, RenderType>> getLayerModels(ItemStack stack, boolean fabulous) {
+    public List<Pair<BakedModel, RenderType>> getLayerModels(ItemStack stack, boolean fabulous) {
         //Cache the remappings so then the inner wrapped ones can cache their quads
         return cachedLayerRedirects.computeIfAbsent(original.getLayerModels(stack, fabulous), originalLayerModels ->
-              originalLayerModels.stream().map(layerModel -> layerModel.<IBakedModel>mapFirst(this::wrapModel)).collect(Collectors.toList()));
+              originalLayerModels.stream().map(layerModel -> layerModel.<BakedModel>mapFirst(this::wrapModel)).toList());
     }
 
-    protected ExtensionBakedModel<T> wrapModel(IBakedModel model) {
+    protected ExtensionBakedModel<T> wrapModel(BakedModel model) {
         return new ExtensionBakedModel<>(model);
     }
 
     public static class LightedBakedModel extends TransformedBakedModel<Void> {
 
-        public LightedBakedModel(IBakedModel original) {
+        public LightedBakedModel(BakedModel original) {
             super(original, QuadTransformation.filtered_fullbright);
         }
 
         @Override
-        protected LightedBakedModel wrapModel(IBakedModel model) {
+        protected LightedBakedModel wrapModel(BakedModel model) {
             return new LightedBakedModel(model);
         }
     }
@@ -158,7 +158,7 @@ public class ExtensionBakedModel<T> implements IBakedModel {
 
         private final QuadTransformation transform;
 
-        public TransformedBakedModel(IBakedModel original, QuadTransformation transform) {
+        public TransformedBakedModel(BakedModel original, QuadTransformation transform) {
             super(original);
             this.transform = transform;
         }
@@ -171,7 +171,7 @@ public class ExtensionBakedModel<T> implements IBakedModel {
         }
 
         @Override
-        public IBakedModel handlePerspective(ItemCameraTransforms.TransformType cameraTransformType, MatrixStack mat) {
+        public BakedModel handlePerspective(ItemTransforms.TransformType cameraTransformType, PoseStack mat) {
             // have the original model apply any perspective transforms onto the MatrixStack
             original.handlePerspective(cameraTransformType, mat);
             // return this model, as we want to draw the item variant quads ourselves
@@ -185,7 +185,7 @@ public class ExtensionBakedModel<T> implements IBakedModel {
         }
 
         @Override
-        protected TransformedBakedModel<T> wrapModel(IBakedModel model) {
+        protected TransformedBakedModel<T> wrapModel(BakedModel model) {
             return new TransformedBakedModel<>(model, transform);
         }
     }
@@ -265,14 +265,11 @@ public class ExtensionBakedModel<T> implements IBakedModel {
             if (obj == this) {
                 return true;
             }
-            if (!(obj instanceof QuadsKey)) {
+            if (!(obj instanceof QuadsKey<?> other)) {
                 return false;
-            }
-            QuadsKey<?> other = (QuadsKey<?>) obj;
-            if (side != other.side || !Objects.equals(state, other.state) || layer != other.layer) {
+            } else if (side != other.side || layer != other.layer || !Objects.equals(state, other.state)) {
                 return false;
-            }
-            if (transformation != null && !transformation.equals(other.transformation)) {
+            } else if (transformation != null && !transformation.equals(other.transformation)) {
                 return false;
             }
             return data == null || equality.test(data, (T) other.getData());
