@@ -1,16 +1,15 @@
 package mekanism.client.render.transmitter;
 
-import com.mojang.blaze3d.matrix.MatrixStack;
-import com.mojang.blaze3d.matrix.MatrixStack.Entry;
-import com.mojang.blaze3d.vertex.IVertexBuilder;
+import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.blaze3d.vertex.PoseStack.Pose;
+import com.mojang.blaze3d.vertex.VertexConsumer;
 import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
-import java.util.stream.Collectors;
 import javax.annotation.ParametersAreNonnullByDefault;
+import mekanism.client.model.MekanismModelCache;
 import mekanism.client.render.MekanismRenderer;
 import mekanism.client.render.lib.Quad;
 import mekanism.client.render.lib.QuadUtils;
@@ -23,17 +22,17 @@ import mekanism.common.tile.transmitter.TileEntityTransmitter;
 import mekanism.common.util.EnumUtils;
 import mekanism.common.util.MekanismUtils;
 import mekanism.common.util.MekanismUtils.ResourceType;
-import net.minecraft.client.renderer.IRenderTypeBuffer;
-import net.minecraft.client.renderer.model.BakedQuad;
-import net.minecraft.client.renderer.model.ItemOverrideList;
-import net.minecraft.client.renderer.model.ModelRotation;
+import net.minecraft.client.renderer.MultiBufferSource;
+import net.minecraft.client.renderer.block.model.BakedQuad;
+import net.minecraft.client.renderer.block.model.ItemOverrides;
+import net.minecraft.client.renderer.blockentity.BlockEntityRendererProvider;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
-import net.minecraft.client.renderer.tileentity.TileEntityRendererDispatcher;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.math.vector.Vector3d;
-import net.minecraft.world.World;
+import net.minecraft.client.resources.model.BlockModelRotation;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.phys.Vec3;
+import net.minecraftforge.client.model.ForgeModelBakery;
 import net.minecraftforge.client.model.IModelConfiguration;
-import net.minecraftforge.client.model.ModelLoader;
 import net.minecraftforge.client.model.data.EmptyModelData;
 
 @ParametersAreNonnullByDefault
@@ -42,17 +41,19 @@ public abstract class RenderTransmitterBase<TRANSMITTER extends TileEntityTransm
     public static final ResourceLocation MODEL_LOCATION = MekanismUtils.getResource(ResourceType.MODEL, "transmitter_contents.obj");
     private static final IModelConfiguration contentsConfiguration = new ContentsModelConfiguration();
     private static final Map<ContentsModelData, List<BakedQuad>> contentModelCache = new Object2ObjectOpenHashMap<>();
-    private static final Vector3d NORMAL = new Vector3d(1, 1, 1).normalize();
+    private static final Vec3 NORMAL = new Vec3(1, 1, 1).normalize();
 
     public static void onStitch() {
         contentModelCache.clear();
     }
 
-    private static List<BakedQuad> getBakedQuads(List<String> visible, TextureAtlasSprite icon, World world) {
+    private static List<BakedQuad> getBakedQuads(List<String> visible, TextureAtlasSprite icon, Level world) {
         return contentModelCache.computeIfAbsent(new ContentsModelData(visible, icon), modelData -> {
-            List<BakedQuad> bakedQuads = MekanismRenderer.contentsModel.bake(new VisibleModelConfiguration(contentsConfiguration, modelData.visible),
-                  ModelLoader.instance(), material -> modelData.icon, ModelRotation.X0_Y0, ItemOverrideList.EMPTY, MODEL_LOCATION
-            ).getQuads(null, null, world.getRandom(), EmptyModelData.INSTANCE);
+            //Note: We get model and then bake as we use different parameters and are caching after modifying
+            List<BakedQuad> bakedQuads = MekanismModelCache.INSTANCE.TRANSMITTER_CONTENTS.getModel()
+                  .bake(new VisibleModelConfiguration(contentsConfiguration, modelData.visible), ForgeModelBakery.instance(), material -> modelData.icon,
+                        BlockModelRotation.X0_Y0, ItemOverrides.EMPTY, MODEL_LOCATION)
+                  .getQuads(null, null, world.getRandom(), EmptyModelData.INSTANCE);
             List<Quad> unpackedQuads = QuadUtils.unpack(bakedQuads);
             for (Quad unpackedQuad : unpackedQuads) {
                 for (Vertex vertex : unpackedQuad.getVertices()) {
@@ -64,61 +65,36 @@ public abstract class RenderTransmitterBase<TRANSMITTER extends TileEntityTransm
         });
     }
 
-    protected RenderTransmitterBase(TileEntityRendererDispatcher renderer) {
-        super(renderer);
+    protected RenderTransmitterBase(BlockEntityRendererProvider.Context context) {
+        super(context);
     }
 
-    protected void renderModel(TRANSMITTER transmitter, MatrixStack matrix, IVertexBuilder builder, int rgb, float alpha, int light, int overlayLight,
+    protected void renderModel(TRANSMITTER transmitter, PoseStack matrix, VertexConsumer builder, int rgb, float alpha, int light, int overlayLight,
           TextureAtlasSprite icon) {
         renderModel(transmitter, matrix, builder, MekanismRenderer.getRed(rgb), MekanismRenderer.getGreen(rgb), MekanismRenderer.getBlue(rgb), alpha, light,
               overlayLight, icon, Arrays.stream(EnumUtils.DIRECTIONS)
                     .map(side -> side.getSerializedName() + transmitter.getTransmitter().getConnectionType(side).getSerializedName().toUpperCase(Locale.ROOT))
-                    .collect(Collectors.toList()));
+                    .toList());
     }
 
-    protected void renderModel(TRANSMITTER transmitter, MatrixStack matrix, IVertexBuilder builder, float red, float green, float blue, float alpha, int light,
+    protected void renderModel(TRANSMITTER transmitter, PoseStack matrix, VertexConsumer builder, float red, float green, float blue, float alpha, int light,
           int overlayLight, TextureAtlasSprite icon, List<String> visible) {
         if (!visible.isEmpty()) {
-            Entry entry = matrix.last();
+            Pose entry = matrix.last();
             //Get all the sides
             for (BakedQuad quad : getBakedQuads(visible, icon, transmitter.getLevel())) {
-                builder.addVertexData(entry, quad, red, green, blue, alpha, light, overlayLight);
+                builder.putBulkData(entry, quad, red, green, blue, alpha, light, overlayLight);
             }
         }
     }
 
     @Override
-    public void render(TRANSMITTER transmitter, float partialTick, MatrixStack matrix, IRenderTypeBuffer renderer, int light, int overlayLight) {
+    public void render(TRANSMITTER transmitter, float partialTick, PoseStack matrix, MultiBufferSource renderer, int light, int overlayLight) {
         if (!MekanismConfig.client.opaqueTransmitters.get()) {
             super.render(transmitter, partialTick, matrix, renderer, light, overlayLight);
         }
     }
 
-    private static class ContentsModelData {
-
-        private final List<String> visible;
-        private final TextureAtlasSprite icon;
-
-        private ContentsModelData(List<String> visible, TextureAtlasSprite icon) {
-            this.visible = visible;
-            this.icon = icon;
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(visible, icon);
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) {
-                return true;
-            }
-            if (o instanceof ContentsModelData) {
-                ContentsModelData other = (ContentsModelData) o;
-                return visible.equals(other.visible) && icon.equals(other.icon);
-            }
-            return false;
-        }
+    private record ContentsModelData(List<String> visible, TextureAtlasSprite icon) {
     }
 }
