@@ -41,28 +41,27 @@ import mekanism.common.lib.frequency.Frequency;
 import mekanism.common.lib.frequency.Frequency.FrequencyIdentity;
 import mekanism.common.tile.machine.TileEntityOredictionificator;
 import mekanism.common.util.text.InputValidator;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Items;
-import net.minecraft.nbt.ByteArrayNBT;
-import net.minecraft.nbt.ByteNBT;
-import net.minecraft.nbt.CollectionNBT;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.nbt.DoubleNBT;
-import net.minecraft.nbt.EndNBT;
-import net.minecraft.nbt.FloatNBT;
-import net.minecraft.nbt.INBT;
-import net.minecraft.nbt.IntArrayNBT;
-import net.minecraft.nbt.IntNBT;
-import net.minecraft.nbt.ListNBT;
-import net.minecraft.nbt.LongArrayNBT;
-import net.minecraft.nbt.LongNBT;
-import net.minecraft.nbt.NumberNBT;
-import net.minecraft.nbt.ShortNBT;
-import net.minecraft.nbt.StringNBT;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.math.vector.Vector3i;
-import net.minecraftforge.common.util.Constants;
+import net.minecraft.core.Vec3i;
+import net.minecraft.nbt.ByteArrayTag;
+import net.minecraft.nbt.ByteTag;
+import net.minecraft.nbt.CollectionTag;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.DoubleTag;
+import net.minecraft.nbt.EndTag;
+import net.minecraft.nbt.FloatTag;
+import net.minecraft.nbt.IntArrayTag;
+import net.minecraft.nbt.IntTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.LongArrayTag;
+import net.minecraft.nbt.LongTag;
+import net.minecraft.nbt.NumericTag;
+import net.minecraft.nbt.ShortTag;
+import net.minecraft.nbt.StringTag;
+import net.minecraft.nbt.Tag;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
 import net.minecraftforge.fluids.FluidStack;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.ForgeRegistryEntry;
@@ -163,6 +162,11 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
                 if (rl != null) {
                     return rl;
                 }
+            } else if (expectedType == FloatingLong.class) {
+                try {
+                    return FloatingLong.parseFloatingLong((String) argument);
+                } catch (NumberFormatException ignored) {
+                }
             } else if (expectedType.isEnum()) {
                 Object sanitized = sanitizeStringToEnum((Class<? extends Enum<?>>) expectedType, (String) argument);
                 if (sanitized != null) {
@@ -174,17 +178,17 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
                     return item;
                 }
             }
-        } else if (argument instanceof Map) {
+        } else if (argument instanceof Map<?, ?> arg) {
             if (IFilter.class.isAssignableFrom(expectedType)) {
-                //Note: instanceof has slightly better performance than if we would instead fo Map.class.isAssignableFrom(argumentType)
-                Object sanitized = convertMapToFilter(expectedType, (Map<?, ?>) argument);
+                //Note: instanceof has slightly better performance than if we would instead of Map.class.isAssignableFrom(argumentType)
+                Object sanitized = convertMapToFilter(expectedType, arg);
                 if (sanitized != null) {
                     return sanitized;
                 }
             }
         }
         //Handle nbt types as a fallback check
-        if (INBT.class.isAssignableFrom(expectedType)) {
+        if (Tag.class.isAssignableFrom(expectedType)) {
             Object sanitized = sanitizeNBT(expectedType, argumentType, argument);
             if (sanitized != null) {
                 return sanitized;
@@ -209,112 +213,100 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
             return result;
         } else if (result instanceof ResourceLocation || result instanceof UUID) {
             return result.toString();
-        } else if (result instanceof ForgeRegistryEntry<?>) {
-            return getName((ForgeRegistryEntry<?>) result);
-        } else if (result instanceof ChemicalStack<?>) {
-            ChemicalStack<?> stack = (ChemicalStack<?>) result;
+        } else if (result instanceof ForgeRegistryEntry<?> registryEntry) {
+            return getName(registryEntry);
+        } else if (result instanceof ChemicalStack<?> stack) {
             Map<String, Object> wrapped = new HashMap<>(2);
             wrapped.put("name", getName(stack.getType()));
             wrapped.put("amount", stack.getAmount());
             return wrapped;
-        } else if (result instanceof FluidStack) {
-            FluidStack stack = (FluidStack) result;
+        } else if (result instanceof FluidStack stack) {
             return wrapStack(stack.getFluid(), "amount", stack.getAmount(), stack.getTag());
-        } else if (result instanceof ItemStack) {
-            ItemStack stack = (ItemStack) result;
+        } else if (result instanceof ItemStack stack) {
             return wrapStack(stack.getItem(), "count", stack.getCount(), stack.getTag());
-        } else if (result instanceof INBT) {
-            Object wrapped = wrapNBT((INBT) result);
+        } else if (result instanceof Tag tag) {
+            Object wrapped = wrapNBT(tag);
             if (wrapped != null) {
                 return wrapped;
             }
-        } else if (result instanceof Vector3i) {
+        } else if (result instanceof Vec3i pos) {
             //BlockPos is covered by this case
-            Vector3i pos = (Vector3i) result;
             Map<String, Object> wrapped = new HashMap<>(3);
             wrapped.put("x", pos.getX());
             wrapped.put("y", pos.getY());
             wrapped.put("z", pos.getZ());
             return wrapped;
-        } else if (result instanceof Coord4D) {
+        } else if (result instanceof Coord4D coord) {
             //BlockPos is covered by this case
-            Coord4D coord = (Coord4D) result;
             Map<String, Object> wrapped = new HashMap<>(4);
             wrapped.put("x", coord.getX());
             wrapped.put("y", coord.getY());
             wrapped.put("z", coord.getZ());
             wrapped.put("dimension", wrapReturnType(coord.dimension.location()));
             return wrapped;
-        } else if (result instanceof Frequency) {
-            FrequencyIdentity identity = ((Frequency) result).getIdentity();
+        } else if (result instanceof Frequency frequency) {
+            FrequencyIdentity identity = frequency.getIdentity();
             Map<String, Object> wrapped = new HashMap<>(2);
-            wrapped.put("key", wrapReturnType(identity.getKey()));
+            wrapped.put("key", wrapReturnType(identity.key()));
             wrapped.put("public", identity.isPublic());
             return wrapped;
-        } else if (result instanceof Enum) {
-            return ((Enum<?>) result).name();
-        } else if (result instanceof IFilter) {
+        } else if (result instanceof Enum<?> res) {
+            return res.name();
+        } else if (result instanceof IFilter res) {
             Map<String, Object> wrapped = new HashMap<>();
-            wrapped.put("type", wrapReturnType(((IFilter<?>) result).getFilterType()));
-            if (result instanceof IItemStackFilter) {
-                ItemStack stack = ((IItemStackFilter<?>) result).getItemStack();
+            wrapped.put("type", wrapReturnType(res.getFilterType()));
+            if (result instanceof IItemStackFilter<?> itemFilter) {
+                ItemStack stack = itemFilter.getItemStack();
                 wrapped.put("item", wrapReturnType(stack.getItem()));
                 if (!stack.isEmpty()) {
-                    CompoundNBT tag = stack.getTag();
+                    CompoundTag tag = stack.getTag();
                     if (tag != null && !tag.isEmpty()) {
                         wrapped.put("itemNBT", wrapNBT(tag));
                     }
                 }
-            } else if (result instanceof IMaterialFilter) {
-                wrapped.put("materialItem", wrapReturnType(((IMaterialFilter<?>) result).getMaterialItem().getItem()));
-            } else if (result instanceof IModIDFilter) {
-                wrapped.put("modId", ((IModIDFilter<?>) result).getModID());
-            } else if (result instanceof ITagFilter) {
-                wrapped.put("tag", ((ITagFilter<?>) result).getTagName());
+            } else if (result instanceof IMaterialFilter<?> materialFilter) {
+                wrapped.put("materialItem", wrapReturnType(materialFilter.getMaterialItem().getItem()));
+            } else if (result instanceof IModIDFilter<?> modIDFilter) {
+                wrapped.put("modId", modIDFilter.getModID());
+            } else if (result instanceof ITagFilter<?> tagFilter) {
+                wrapped.put("tag", tagFilter.getTagName());
             }
-            if (result instanceof MinerFilter) {
-                MinerFilter<?> minerFilter = (MinerFilter<?>) result;
+            if (result instanceof MinerFilter<?> minerFilter) {
                 wrapped.put("requiresReplacement", minerFilter.requiresReplacement);
                 wrapped.put("replaceTarget", wrapReturnType(minerFilter.replaceTarget));
-            } else if (result instanceof SorterFilter) {
-                SorterFilter<?> sorterFilter = (SorterFilter<?>) result;
+            } else if (result instanceof SorterFilter<?> sorterFilter) {
                 wrapped.put("allowDefault", sorterFilter.allowDefault);
                 wrapped.put("color", wrapReturnType(sorterFilter.color));
                 wrapped.put("size", sorterFilter.sizeMode);
                 wrapped.put("min", sorterFilter.min);
                 wrapped.put("max", sorterFilter.max);
-                if (sorterFilter instanceof SorterItemStackFilter) {
-                    SorterItemStackFilter filter = (SorterItemStackFilter) sorterFilter;
+                if (sorterFilter instanceof SorterItemStackFilter filter) {
                     wrapped.put("fuzzy", filter.fuzzyMode);
                 }
-            } else if (result instanceof QIOFilter) {
-                QIOFilter<?> qioFilter = (QIOFilter<?>) result;
-                if (qioFilter instanceof QIOItemStackFilter) {
-                    QIOItemStackFilter filter = (QIOItemStackFilter) qioFilter;
+            } else if (result instanceof QIOFilter<?> qioFilter) {
+                if (qioFilter instanceof QIOItemStackFilter filter) {
                     wrapped.put("fuzzy", filter.fuzzyMode);
                 }
-            } else if (result instanceof OredictionificatorFilter) {
-                OredictionificatorFilter<?, ?, ?> filter = (OredictionificatorFilter<?, ?, ?>) result;
+            } else if (result instanceof OredictionificatorFilter<?, ?, ?> filter) {
                 wrapped.put("target", filter.getFilterText());
                 wrapped.put("selected", wrapReturnType(filter.getResultElement()));
             }
             return wrapped;
-        } else if (result instanceof Map) {
-            return ((Map<?, ?>) result).entrySet().stream().collect(Collectors.toMap(entry -> wrapReturnType(entry.getKey()), entry -> wrapReturnType(entry.getValue()),
-                  (a, b) -> b));
-        } else if (result instanceof Collection) {
+        } else if (result instanceof Map<?, ?> res) {
+            return res.entrySet().stream().collect(Collectors.toMap(entry -> wrapReturnType(entry.getKey()), entry -> wrapReturnType(entry.getValue()), (a, b) -> b));
+        } else if (result instanceof Collection<?> res) {
             //Note: We support any "collection" as it doesn't really matter if it is a set vs a list because
             // on ComputerCraft's end it will just be converted from a collection to a table, and be iterated
             // so there is no real difference at that point about the type it is
-            return ((Collection<?>) result).stream().map(CCArgumentWrapper::wrapReturnType).collect(Collectors.toList());
-        } else if (result instanceof Object[]) {
+            return res.stream().map(CCArgumentWrapper::wrapReturnType).toList();
+        } else if (result instanceof Object[] res) {
             //Note: This doesn't handle/deal with primitive arrays
-            return Arrays.stream((Object[]) result).map(CCArgumentWrapper::wrapReturnType).toArray();
+            return Arrays.stream(res).map(CCArgumentWrapper::wrapReturnType).toArray();
         }
         return result;
     }
 
-    private static Map<String, Object> wrapStack(ForgeRegistryEntry<?> entry, String sizeKey, int amount, @Nullable CompoundNBT tag) {
+    private static Map<String, Object> wrapStack(ForgeRegistryEntry<?> entry, String sizeKey, int amount, @Nullable CompoundTag tag) {
         boolean hasTag = tag != null && !tag.isEmpty() && amount > 0;
         Map<String, Object> wrapped = new HashMap<>(hasTag ? 3 : 2);
         wrapped.put("name", getName(entry));
@@ -326,35 +318,35 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
     }
 
     @Nullable
-    private static Object wrapNBT(@Nullable INBT nbt) {
+    private static Object wrapNBT(@Nullable Tag nbt) {
         if (nbt == null) {
             return null;
         }
         switch (nbt.getId()) {
-            case Constants.NBT.TAG_BYTE:
-            case Constants.NBT.TAG_SHORT:
-            case Constants.NBT.TAG_INT:
-            case Constants.NBT.TAG_LONG:
-            case Constants.NBT.TAG_FLOAT:
-            case Constants.NBT.TAG_DOUBLE:
-            case Constants.NBT.TAG_ANY_NUMERIC:
-                return ((NumberNBT) nbt).getAsNumber();
-            case Constants.NBT.TAG_STRING:
-            case Constants.NBT.TAG_END://Tag End is highly unlikely to ever be used outside of networking but handle it anyway
+            case Tag.TAG_BYTE:
+            case Tag.TAG_SHORT:
+            case Tag.TAG_INT:
+            case Tag.TAG_LONG:
+            case Tag.TAG_FLOAT:
+            case Tag.TAG_DOUBLE:
+            case Tag.TAG_ANY_NUMERIC:
+                return ((NumericTag) nbt).getAsNumber();
+            case Tag.TAG_STRING:
+            case Tag.TAG_END://Tag End is highly unlikely to ever be used outside of networking but handle it anyway
                 return nbt.getAsString();
-            case Constants.NBT.TAG_BYTE_ARRAY:
-            case Constants.NBT.TAG_INT_ARRAY:
-            case Constants.NBT.TAG_LONG_ARRAY:
-            case Constants.NBT.TAG_LIST:
-                CollectionNBT<?> collectionNBT = (CollectionNBT<?>) nbt;
+            case Tag.TAG_BYTE_ARRAY:
+            case Tag.TAG_INT_ARRAY:
+            case Tag.TAG_LONG_ARRAY:
+            case Tag.TAG_LIST:
+                CollectionTag<?> collectionNBT = (CollectionTag<?>) nbt;
                 int size = collectionNBT.size();
                 Map<Integer, Object> wrappedCollection = new HashMap<>(size);
                 for (int i = 0; i < size; i++) {
                     wrappedCollection.put(i, wrapNBT(collectionNBT.get(i)));
                 }
                 return wrappedCollection;
-            case Constants.NBT.TAG_COMPOUND:
-                CompoundNBT compound = (CompoundNBT) nbt;
+            case Tag.TAG_COMPOUND:
+                CompoundTag compound = (CompoundTag) nbt;
                 Map<String, Object> wrappedCompound = new HashMap<>(compound.size());
                 for (String key : compound.getAllKeys()) {
                     Object value = wrapNBT(compound.get(key));
@@ -394,19 +386,19 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
         }
         ItemStack stack = new ItemStack(item);
         if (rawNBT != null) {
-            INBT nbt = sanitizeNBT(CompoundNBT.class, rawNBT.getClass(), rawNBT);
-            if (!(nbt instanceof CompoundNBT)) {
+            Tag nbt = sanitizeNBT(CompoundTag.class, rawNBT.getClass(), rawNBT);
+            if (!(nbt instanceof CompoundTag)) {
                 //Failed to deserialize properly, there is an issue with the passed in lua side
                 return ItemStack.EMPTY;
             }
-            stack.setTag((CompoundNBT) nbt);
+            stack.setTag((CompoundTag) nbt);
         }
         return stack;
     }
 
     private static Item tryCreateItem(@Nullable Object rawName) {
-        if (rawName instanceof String) {
-            ResourceLocation itemName = ResourceLocation.tryParse((String) rawName);
+        if (rawName instanceof String name) {
+            ResourceLocation itemName = ResourceLocation.tryParse(name);
             if (itemName != null) {
                 Item item = ForgeRegistries.ITEMS.getValue(itemName);
                 if (item != null) {
@@ -419,13 +411,10 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
 
     @Nullable
     private static String tryGetFilterTag(@Nullable Object rawTag) {
-        if (rawTag instanceof String) {
-            String tag = (String) rawTag;
-            if (!tag.isEmpty()) {
-                tag = tag.toLowerCase(Locale.ROOT);
-                if (InputValidator.test(tag, InputValidator.RESOURCE_LOCATION.or(InputValidator.WILDCARD_CHARS))) {
-                    return tag;
-                }
+        if (rawTag instanceof String tag && !tag.isEmpty()) {
+            tag = tag.toLowerCase(Locale.ROOT);
+            if (InputValidator.test(tag, InputValidator.RESOURCE_LOCATION.or(InputValidator.WILDCARD_CHARS))) {
+                return tag;
             }
         }
         return null;
@@ -433,30 +422,21 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
 
     @Nullable
     private static String tryGetFilterModId(@Nullable Object rawModId) {
-        if (rawModId instanceof String) {
-            String modId = (String) rawModId;
-            if (!modId.isEmpty()) {
-                modId = modId.toLowerCase(Locale.ROOT);
-                if (InputValidator.test(modId, InputValidator.RL_NAMESPACE.or(InputValidator.WILDCARD_CHARS))) {
-                    return modId;
-                }
+        if (rawModId instanceof String modId && !modId.isEmpty()) {
+            modId = modId.toLowerCase(Locale.ROOT);
+            if (InputValidator.test(modId, InputValidator.RL_NAMESPACE.or(InputValidator.WILDCARD_CHARS))) {
+                return modId;
             }
         }
         return null;
     }
 
     private static boolean getBooleanFromRaw(@Nullable Object raw) {
-        if (raw instanceof Boolean) {
-            return (Boolean) raw;
-        }
-        return false;
+        return raw instanceof Boolean bool ? bool : Boolean.valueOf(false);
     }
 
     private static int getIntFromRaw(@Nullable Object raw) {
-        if (raw instanceof Number) {
-            return ((Number) raw).intValue();
-        }
-        return 0;
+        return raw instanceof Number number ? number.intValue() : 0;
     }
 
     @Nullable
@@ -464,44 +444,42 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
         //We may want to try improving this at some point, or somehow making it slightly less hardcoded
         // but for now this will have to do
         Object type = map.get("type");
-        if (type instanceof String) {
+        if (type instanceof String string) {
             //Handle filters as arguments, this may not be the best implementation, but it will do for now
-            FilterType filterType = sanitizeStringToEnum(FilterType.class, (String) type);
+            FilterType filterType = sanitizeStringToEnum(FilterType.class, string);
             if (filterType != null) {
                 IFilter<?> filter = BaseFilter.fromType(filterType);
                 if (expectedType.isInstance(filter)) {
                     //Validate the filter is of the type we expect
-                    if (filter instanceof IItemStackFilter) {
+                    if (filter instanceof IItemStackFilter<?> itemFilter) {
                         ItemStack stack = tryCreateFilterItem(map.get("item"), map.get("itemNBT"));
                         if (stack.isEmpty()) {
                             return null;
                         }
-                        ((IItemStackFilter<?>) filter).setItemStack(stack);
-                    } else if (filter instanceof IMaterialFilter) {
+                        itemFilter.setItemStack(stack);
+                    } else if (filter instanceof IMaterialFilter<?> materialFilter) {
                         ItemStack stack = tryCreateFilterItem(map.get("materialItem"), null);
                         if (stack.isEmpty()) {
                             return null;
                         }
-                        ((IMaterialFilter<?>) filter).setMaterialItem(stack);
-                    } else if (filter instanceof IModIDFilter) {
+                        materialFilter.setMaterialItem(stack);
+                    } else if (filter instanceof IModIDFilter<?> modIDFilter) {
                         String modId = tryGetFilterModId(map.get("modId"));
                         if (modId == null) {
                             return null;
                         }
-                        ((IModIDFilter<?>) filter).setModID(modId);
-                    } else if (filter instanceof ITagFilter) {
+                        modIDFilter.setModID(modId);
+                    } else if (filter instanceof ITagFilter<?> tagFilter) {
                         String tag = tryGetFilterTag(map.get("tag"));
                         if (tag == null) {
                             return null;
                         }
-                        ((ITagFilter<?>) filter).setTagName(tag);
+                        tagFilter.setTagName(tag);
                     }
-                    if (filter instanceof MinerFilter) {
-                        MinerFilter<?> minerFilter = (MinerFilter<?>) filter;
+                    if (filter instanceof MinerFilter<?> minerFilter) {
                         minerFilter.requiresReplacement = getBooleanFromRaw(map.get("requiresReplacement"));
                         minerFilter.replaceTarget = tryCreateItem(map.get("replaceTarget"));
-                    } else if (filter instanceof SorterFilter) {
-                        SorterFilter<?> sorterFilter = (SorterFilter<?>) filter;
+                    } else if (filter instanceof SorterFilter<?> sorterFilter) {
                         sorterFilter.allowDefault = getBooleanFromRaw(map.get("allowDefault"));
                         Object rawColor = map.get("color");
                         if (rawColor instanceof String) {
@@ -513,23 +491,18 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
                         if (sorterFilter.min < 0 || sorterFilter.max < 0 || sorterFilter.min > sorterFilter.max || sorterFilter.max > 64) {
                             return null;
                         }
-                        if (sorterFilter instanceof SorterItemStackFilter) {
-                            SorterItemStackFilter sorterItemFilter = (SorterItemStackFilter) sorterFilter;
+                        if (sorterFilter instanceof SorterItemStackFilter sorterItemFilter) {
                             sorterItemFilter.fuzzyMode = getBooleanFromRaw(map.get("fuzzy"));
                         }
-                    } else if (filter instanceof QIOFilter) {
-                        QIOFilter<?> qioFilter = (QIOFilter<?>) filter;
-                        if (qioFilter instanceof QIOItemStackFilter) {
-                            QIOItemStackFilter qioItemFilter = (QIOItemStackFilter) qioFilter;
+                    } else if (filter instanceof QIOFilter<?> qioFilter) {
+                        if (qioFilter instanceof QIOItemStackFilter qioItemFilter) {
                             qioItemFilter.fuzzyMode = getBooleanFromRaw(map.get("fuzzy"));
                         }
-                    } else if (filter instanceof OredictionificatorFilter) {
-                        OredictionificatorFilter<?, ?, ?> oredictionificatorFilter = (OredictionificatorFilter<?, ?, ?>) filter;
+                    } else if (filter instanceof OredictionificatorFilter<?, ?, ?> oredictionificatorFilter) {
                         Object rawTag = map.get("target");
-                        if (!(rawTag instanceof String)) {
+                        if (!(rawTag instanceof String tag)) {
                             return null;
                         }
-                        String tag = (String) rawTag;
                         if (tag.isEmpty()) {
                             return null;
                         }
@@ -538,10 +511,10 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
                             return null;
                         }
                         oredictionificatorFilter.setFilter(rl);
-                        if (oredictionificatorFilter instanceof OredictionificatorItemFilter) {
+                        if (oredictionificatorFilter instanceof OredictionificatorItemFilter itemFilter) {
                             Item item = tryCreateItem(map.get("selected"));
                             if (item != Items.AIR) {
-                                ((OredictionificatorItemFilter) oredictionificatorFilter).setSelectedOutput(item);
+                                itemFilter.setSelectedOutput(item);
                             }
                         }
                     }
@@ -553,65 +526,64 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
     }
 
     @Nullable
-    private static INBT sanitizeNBT(Class<?> expectedType, Class<?> argumentType, Object argument) {
+    private static Tag sanitizeNBT(Class<?> expectedType, Class<?> argumentType, Object argument) {
         if (argumentType == Boolean.class) {
-            if (expectedType == ByteNBT.class || expectedType == NumberNBT.class || expectedType == INBT.class) {
-                return ByteNBT.valueOf((boolean) argument);
+            if (expectedType == ByteTag.class || expectedType == NumericTag.class || expectedType == Tag.class) {
+                return ByteTag.valueOf((boolean) argument);
             }
         } else if (argumentType == Double.class) {
             double d = (double) argument;
             if (Double.isFinite(d)) {
-                if (expectedType == ByteNBT.class) {
+                if (expectedType == ByteTag.class) {
                     if (d >= Byte.MIN_VALUE && d <= Byte.MAX_VALUE) {
-                        return ByteNBT.valueOf((byte) d);
+                        return ByteTag.valueOf((byte) d);
                     }
-                } else if (expectedType == ShortNBT.class) {
+                } else if (expectedType == ShortTag.class) {
                     if (d >= Short.MIN_VALUE && d <= Short.MAX_VALUE) {
-                        return ShortNBT.valueOf((short) d);
+                        return ShortTag.valueOf((short) d);
                     }
-                } else if (expectedType == IntNBT.class) {
+                } else if (expectedType == IntTag.class) {
                     if (d >= Integer.MIN_VALUE && d <= Integer.MAX_VALUE) {
-                        return IntNBT.valueOf((int) d);
+                        return IntTag.valueOf((int) d);
                     }
-                } else if (expectedType == LongNBT.class) {
+                } else if (expectedType == LongTag.class) {
                     if (d >= Long.MIN_VALUE && d <= Long.MAX_VALUE) {
-                        return LongNBT.valueOf((long) d);
+                        return LongTag.valueOf((long) d);
                     }
-                } else if (expectedType == FloatNBT.class) {
+                } else if (expectedType == FloatTag.class) {
                     if (d >= -Float.MAX_VALUE && d <= Float.MAX_VALUE) {
                         //Note: MIN_VALUE on float is the smallest positive number
-                        return FloatNBT.valueOf((float) d);
+                        return FloatTag.valueOf((float) d);
                     }
-                } else if (expectedType == DoubleNBT.class) {
-                    return DoubleNBT.valueOf(d);
-                } else if (expectedType == NumberNBT.class || expectedType == INBT.class) {
+                } else if (expectedType == DoubleTag.class) {
+                    return DoubleTag.valueOf(d);
+                } else if (expectedType == NumericTag.class || expectedType == Tag.class) {
                     //Handle generic number or nbt specification
                     if (d == Math.floor(d) && d >= Long.MIN_VALUE && d <= Long.MAX_VALUE) {
                         //If the number is an integer type and not out of range of longs
                         if (d >= Byte.MIN_VALUE && d <= Byte.MAX_VALUE) {
-                            return ByteNBT.valueOf((byte) d);
+                            return ByteTag.valueOf((byte) d);
                         } else if (d >= Short.MIN_VALUE && d <= Short.MAX_VALUE) {
-                            return ShortNBT.valueOf((short) d);
+                            return ShortTag.valueOf((short) d);
                         } else if (d >= Integer.MIN_VALUE && d <= Integer.MAX_VALUE) {
-                            return IntNBT.valueOf((int) d);
+                            return IntTag.valueOf((int) d);
                         }
-                        return LongNBT.valueOf((long) d);
+                        return LongTag.valueOf((long) d);
                     } else if (d >= -Float.MAX_VALUE && d <= Float.MAX_VALUE) {
                         //Otherwise, if it is in the range of a float give float nbt
-                        return FloatNBT.valueOf((float) d);
+                        return FloatTag.valueOf((float) d);
                     }
-                    return DoubleNBT.valueOf(d);
+                    return DoubleTag.valueOf(d);
                 }
             }
         } else if (argumentType == String.class) {
-            if (expectedType == StringNBT.class || expectedType == INBT.class) {
-                return StringNBT.valueOf((String) argument);
-            } else if (expectedType == EndNBT.class && argument.equals("END")) {
+            if (expectedType == StringTag.class || expectedType == Tag.class) {
+                return StringTag.valueOf((String) argument);
+            } else if (expectedType == EndTag.class && argument.equals("END")) {
                 //Unlikely to ever be the expected case but handle it anyway as it is easy.
-                return EndNBT.INSTANCE;
+                return EndTag.INSTANCE;
             }
-        } else if (argument instanceof Map) {
-            Map<?, ?> map = (Map<?, ?>) argument;
+        } else if (argument instanceof Map<?, ?> map) {
             if (map.size() == 2) {
                 //If the size of the map is two, check if it is a hint for the type of NBT
                 //TODO: We may want to document the existence of this typeHint system somewhere
@@ -619,19 +591,19 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
                 Object typeHintRaw = map.get(CCArgumentWrapper.TYPE_HINT_KEY);
                 if (value != null && typeHintRaw instanceof Double) {
                     double hint = (double) typeHintRaw;
-                    if (Double.isFinite(hint) && (hint == Constants.NBT.TAG_ANY_NUMERIC || (hint >= Constants.NBT.TAG_END && hint <= Constants.NBT.TAG_LONG_ARRAY))) {
-                        Class<? extends INBT> hinted = getTypeFromHint((int) hint);
-                        if (expectedType == hinted || expectedType == INBT.class) {
+                    if (Double.isFinite(hint) && (hint == Tag.TAG_ANY_NUMERIC || (hint >= Tag.TAG_END && hint <= Tag.TAG_LONG_ARRAY))) {
+                        Class<? extends Tag> hinted = getTypeFromHint((int) hint);
+                        if (expectedType == hinted || expectedType == Tag.class) {
                             //Hint is same as the type we were expecting, or we are expecting any type of NBT
                             return sanitizeNBT(hinted, value.getClass(), value);
-                        } else if (expectedType == NumberNBT.class) {
-                            if (hinted == ByteNBT.class || hinted == ShortNBT.class || hinted == IntNBT.class ||
-                                hinted == LongNBT.class || hinted == FloatNBT.class || hinted == DoubleNBT.class) {
+                        } else if (expectedType == NumericTag.class) {
+                            if (hinted == ByteTag.class || hinted == ShortTag.class || hinted == IntTag.class ||
+                                hinted == LongTag.class || hinted == FloatTag.class || hinted == DoubleTag.class) {
                                 //If it is a specific type of number use that
                                 return sanitizeNBT(hinted, value.getClass(), value);
                             }
-                        } else if (expectedType == CollectionNBT.class) {
-                            if (hinted == ByteArrayNBT.class || hinted == IntArrayNBT.class || hinted == LongArrayNBT.class || hinted == ListNBT.class) {
+                        } else if (expectedType == CollectionTag.class) {
+                            if (hinted == ByteArrayTag.class || hinted == IntArrayTag.class || hinted == LongArrayTag.class || hinted == ListTag.class) {
                                 //If it is a specific type of collection use that
                                 return sanitizeNBT(hinted, value.getClass(), value);
                             }
@@ -642,31 +614,31 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
                 }
             }
             Set<? extends Map.Entry<?, ?>> entries = map.entrySet();
-            if (expectedType == ByteArrayNBT.class) {
+            if (expectedType == ByteArrayTag.class) {
                 byte[] bytes = new byte[entries.size()];
                 if (sanitizeNBTCollection(entries, new ArrayElementValidator(value -> value >= Byte.MIN_VALUE && value <= Byte.MAX_VALUE,
-                      (key, value) -> bytes[key] = value.byteValue(), Constants.NBT.TAG_BYTE))) {
-                    return new ByteArrayNBT(bytes);
+                      (key, value) -> bytes[key] = value.byteValue(), Tag.TAG_BYTE))) {
+                    return new ByteArrayTag(bytes);
                 }
-            } else if (expectedType == IntArrayNBT.class) {
+            } else if (expectedType == IntArrayTag.class) {
                 int[] ints = new int[entries.size()];
                 if (sanitizeNBTCollection(entries, new ArrayElementValidator(value -> value >= Integer.MIN_VALUE && value <= Integer.MAX_VALUE,
-                      (key, value) -> ints[key] = value.intValue(), Constants.NBT.TAG_INT))) {
-                    return new IntArrayNBT(ints);
+                      (key, value) -> ints[key] = value.intValue(), Tag.TAG_INT))) {
+                    return new IntArrayTag(ints);
                 }
-            } else if (expectedType == LongArrayNBT.class) {
+            } else if (expectedType == LongArrayTag.class) {
                 long[] longs = new long[entries.size()];
                 if (sanitizeNBTCollection(entries, new ArrayElementValidator(value -> value >= Long.MIN_VALUE && value <= Long.MAX_VALUE,
-                      (key, value) -> longs[key] = value.longValue(), Constants.NBT.TAG_LONG))) {
-                    return new LongArrayNBT(longs);
+                      (key, value) -> longs[key] = value.longValue(), Tag.TAG_LONG))) {
+                    return new LongArrayTag(longs);
                 }
-            } else if (expectedType == ListNBT.class) {
+            } else if (expectedType == ListTag.class) {
                 return sanitizeNBTList(entries);
-            } else if (expectedType == CollectionNBT.class) {
+            } else if (expectedType == CollectionTag.class) {
                 return sanitizeNBTCollection(entries);
-            } else if (expectedType == CompoundNBT.class) {
+            } else if (expectedType == CompoundTag.class) {
                 return sanitizeNBTCompound(entries);
-            } else if (expectedType == INBT.class) {
+            } else if (expectedType == Tag.class) {
                 Optional<? extends Map.Entry<?, ?>> element = entries.stream().findAny();
                 if (element.isPresent() && element.get().getKey() instanceof Double) {
                     //If the map is not empty and the key is a double parse it as a collection
@@ -679,52 +651,38 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
         return null;
     }
 
-    private static Class<? extends INBT> getTypeFromHint(int hint) {
-        switch (hint) {
-            case Constants.NBT.TAG_BYTE:
-                return ByteNBT.class;
-            case Constants.NBT.TAG_SHORT:
-                return ShortNBT.class;
-            case Constants.NBT.TAG_INT:
-                return IntNBT.class;
-            case Constants.NBT.TAG_LONG:
-                return LongNBT.class;
-            case Constants.NBT.TAG_FLOAT:
-                return FloatNBT.class;
-            case Constants.NBT.TAG_DOUBLE:
-                return DoubleNBT.class;
-            case Constants.NBT.TAG_ANY_NUMERIC:
-                return NumberNBT.class;
-            case Constants.NBT.TAG_STRING:
-                return StringNBT.class;
-            case Constants.NBT.TAG_BYTE_ARRAY:
-                return ByteArrayNBT.class;
-            case Constants.NBT.TAG_INT_ARRAY:
-                return IntArrayNBT.class;
-            case Constants.NBT.TAG_LONG_ARRAY:
-                return LongArrayNBT.class;
-            case Constants.NBT.TAG_LIST:
-                return ListNBT.class;
-            case Constants.NBT.TAG_COMPOUND:
-                return CompoundNBT.class;
-            case Constants.NBT.TAG_END:
-                return EndNBT.class;
-        }
-        return INBT.class;
+    private static Class<? extends Tag> getTypeFromHint(int hint) {
+        return switch (hint) {
+            case Tag.TAG_BYTE -> ByteTag.class;
+            case Tag.TAG_SHORT -> ShortTag.class;
+            case Tag.TAG_INT -> IntTag.class;
+            case Tag.TAG_LONG -> LongTag.class;
+            case Tag.TAG_FLOAT -> FloatTag.class;
+            case Tag.TAG_DOUBLE -> DoubleTag.class;
+            case Tag.TAG_ANY_NUMERIC -> NumericTag.class;
+            case Tag.TAG_STRING -> StringTag.class;
+            case Tag.TAG_BYTE_ARRAY -> ByteArrayTag.class;
+            case Tag.TAG_INT_ARRAY -> IntArrayTag.class;
+            case Tag.TAG_LONG_ARRAY -> LongArrayTag.class;
+            case Tag.TAG_LIST -> ListTag.class;
+            case Tag.TAG_COMPOUND -> CompoundTag.class;
+            case Tag.TAG_END -> EndTag.class;
+            default -> Tag.class;
+        };
     }
 
     @Nullable
-    private static CompoundNBT sanitizeNBTCompound(Set<? extends Map.Entry<?, ?>> entries) {
-        CompoundNBT nbt = new CompoundNBT();
+    private static CompoundTag sanitizeNBTCompound(Set<? extends Map.Entry<?, ?>> entries) {
+        CompoundTag nbt = new CompoundTag();
         for (Map.Entry<?, ?> entry : entries) {
             Object key = entry.getKey();
-            if (!(key instanceof String)) {
+            if (!(key instanceof String string)) {
                 //If the key isn't a String: fail
                 return null;
             }
             Object value = entry.getValue();
-            INBT nbtValue = sanitizeNBT(INBT.class, value.getClass(), value);
-            if (nbtValue == null || nbt.put((String) key, nbtValue) != null) {
+            Tag nbtValue = sanitizeNBT(Tag.class, value.getClass(), value);
+            if (nbtValue == null || nbt.put(string, nbtValue) != null) {
                 //If the value is not an NBT value, or we already have an entry in our compound for that key: fail
                 return null;
             }
@@ -733,16 +691,16 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
     }
 
     @Nullable
-    private static CollectionNBT<?> sanitizeNBTCollection(Set<? extends Map.Entry<?, ?>> entries) {
-        ListNBT nbtList = sanitizeNBTList(entries);
+    private static CollectionTag<?> sanitizeNBTCollection(Set<? extends Map.Entry<?, ?>> entries) {
+        ListTag nbtList = sanitizeNBTList(entries);
         if (nbtList != null) {
             //If we have a list, if it is either entirely bytes, ints, or longs then convert it to the corresponding array type
-            if (nbtList.getElementType() == Constants.NBT.TAG_BYTE) {
-                return new ByteArrayNBT(nbtList.stream().map(e -> ((ByteNBT) e).getAsByte()).collect(Collectors.toList()));
-            } else if (nbtList.getElementType() == Constants.NBT.TAG_INT) {
-                return new IntArrayNBT(nbtList.stream().mapToInt(e -> ((IntNBT) e).getAsInt()).toArray());
-            } else if (nbtList.getElementType() == Constants.NBT.TAG_LONG) {
-                return new LongArrayNBT(nbtList.stream().mapToLong(e -> ((LongNBT) e).getAsLong()).toArray());
+            if (nbtList.getElementType() == Tag.TAG_BYTE) {
+                return new ByteArrayTag(nbtList.stream().map(e -> ((ByteTag) e).getAsByte()).toList());
+            } else if (nbtList.getElementType() == Tag.TAG_INT) {
+                return new IntArrayTag(nbtList.stream().mapToInt(e -> ((IntTag) e).getAsInt()).toArray());
+            } else if (nbtList.getElementType() == Tag.TAG_LONG) {
+                return new LongArrayTag(nbtList.stream().mapToLong(e -> ((LongTag) e).getAsLong()).toArray());
             }
             return nbtList;
         }
@@ -750,7 +708,7 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
     }
 
     @Nullable
-    private static ListNBT sanitizeNBTList(Set<? extends Map.Entry<?, ?>> entries) {
+    private static ListTag sanitizeNBTList(Set<? extends Map.Entry<?, ?>> entries) {
         ValidateAndConsumeListElement val = new ValidateAndConsumeListElement(entries.size());
         return sanitizeNBTCollection(entries, val) ? val.toList() : null;
     }
@@ -780,17 +738,8 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
         return true;
     }
 
-    private static class ArrayElementValidator implements BiFunction<Integer, Object, Boolean> {
-
-        private final DoublePredicate rangeValidator;
-        private final BiConsumer<Integer, Double> consumeValue;
-        private final int expectedType;
-
-        public ArrayElementValidator(DoublePredicate rangeValidator, BiConsumer<Integer, Double> consumeValue, int expectedType) {
-            this.rangeValidator = rangeValidator;
-            this.consumeValue = consumeValue;
-            this.expectedType = expectedType;
-        }
+    private record ArrayElementValidator(DoublePredicate rangeValidator, BiConsumer<Integer, Double> consumeValue, int expectedType) implements
+          BiFunction<Integer, Object, Boolean> {
 
         @Override
         public Boolean apply(Integer key, Object value) {
@@ -800,8 +749,7 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
                     consumeValue.accept(key, v);
                     return true;
                 }
-            } else if (value instanceof Map) {
-                Map<?, ?> map = (Map<?, ?>) value;
+            } else if (value instanceof Map<?, ?> map) {
                 if (map.size() == 2) {
                     //If the size of the map is two, check if it is a hint for the type of NBT. This is a massively reduced
                     // hint matching check as we can make a lot of assumptions about how this method is used and not have
@@ -819,50 +767,51 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
 
     private static class ValidateAndConsumeListElement implements BiFunction<Integer, Object, Boolean> {
 
-        private final INBT[] elements;
-        private Class<? extends INBT> desiredClass = INBT.class;
-        private Class<? extends INBT> searchClass = INBT.class;
+        private final Tag[] elements;
+        private Class<? extends Tag> desiredClass = Tag.class;
+        private Class<? extends Tag> searchClass = Tag.class;
 
         public ValidateAndConsumeListElement(int size) {
-            this.elements = new INBT[size];
+            this.elements = new Tag[size];
         }
 
         @Override
         public Boolean apply(Integer key, Object value) {
-            INBT element = sanitizeNBT(searchClass, value.getClass(), value);
+            Tag element = sanitizeNBT(searchClass, value.getClass(), value);
             if (element == null) {
                 return false;
             }
-            Class<? extends INBT> elementClass = element.getClass();
-            if (elementClass == EndNBT.class) {
+            Class<? extends Tag> elementClass = element.getClass();
+            if (elementClass == EndTag.class) {
                 //ListNBT does not support tag end
                 return false;
             }
             //Validate the type matches as ListNBT requires all elements to be of the same type
-            if (desiredClass == INBT.class) {
+            if (desiredClass == Tag.class) {
                 desiredClass = elementClass;
-                if (element instanceof NumberNBT) {
-                    searchClass = NumberNBT.class;
-                } else if (elementClass == ListNBT.class) {
+                if (element instanceof NumericTag) {
+                    searchClass = NumericTag.class;
+                } else if (elementClass == ListTag.class) {
                     //Otherwise, only check ListNBTs. We can get away with this because our generic CollectionNBT/INBT
                     // handling first tries to get it into an array before a List so we are only here if it isn't a supported array type
-                    if (((ListNBT) element).getElementType() == Constants.NBT.TAG_SHORT) {
+                    if (((ListTag) element).getElementType() == Tag.TAG_SHORT) {
                         //If the inner type is a short, check collections
                         // Note: It is not possible for it to be an *empty* list here as our base check is for INBT
                         // which would cause us to end up with an empty CompoundNBT instead
-                        searchClass = CollectionNBT.class;
-                    } else
+                        searchClass = CollectionTag.class;
+                    } else {
                         searchClass = elementClass;
-                } else if (element instanceof CollectionNBT) {
+                    }
+                } else if (element instanceof CollectionTag) {
                     //Arrays
-                    searchClass = CollectionNBT.class;
-                } else if (!(element instanceof CompoundNBT) || !((CompoundNBT) element).isEmpty()) {
+                    searchClass = CollectionTag.class;
+                } else if (!(element instanceof CompoundTag tag) || !tag.isEmpty()) {
                     //If it is not a CompoundNBT, or it is not an empty CompoundNBT mark it as the type we search for
                     // otherwise if it is an empty CompoundNBT allow it to search INBT to try and get other things like arrays/lists
                     searchClass = elementClass;
                 }
             } else if (desiredClass != elementClass) {
-                if (element instanceof NumberNBT) {
+                if (element instanceof NumericTag) {
                     if (validUpcast(desiredClass, elementClass)) {
                         desiredClass = elementClass;
                     } else if (!validUpcast(elementClass, desiredClass)) {
@@ -871,75 +820,75 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
                         // we ever enter this invalid state return false to signify it
                         return false;
                     }
-                } else if (elementClass == ByteArrayNBT.class) {
+                } else if (elementClass == ByteArrayTag.class) {
                     //Allow casting bytes up to int arrays, long arrays, or short lists
                     // To allow for easier reading the below if statement is can be written as the negation of this:
                     // desiredClass == IntArrayNBT.class || desiredClass == LongArrayNBT.class || (desiredClass == ListNBT.class && searchClass == CollectionNBT.class)
-                    if (desiredClass != IntArrayNBT.class && desiredClass != LongArrayNBT.class && (desiredClass != ListNBT.class || searchClass != CollectionNBT.class)) {
+                    if (desiredClass != IntArrayTag.class && desiredClass != LongArrayTag.class && (desiredClass != ListTag.class || searchClass != CollectionTag.class)) {
                         //If it is not one of them, check if we are expecting an empty compound (which is indistinguishable from an empty array)
-                        if (desiredClass == CompoundNBT.class && searchClass == INBT.class) {
+                        if (desiredClass == CompoundTag.class && searchClass == Tag.class) {
                             // and if we are, allow it but transition the target over to byte arrays
-                            desiredClass = ByteArrayNBT.class;
-                            searchClass = CollectionNBT.class;
+                            desiredClass = ByteArrayTag.class;
+                            searchClass = CollectionTag.class;
                         } else {
                             return false;
                         }
                     }
-                } else if (elementClass == IntArrayNBT.class) {
-                    if (desiredClass == ByteArrayNBT.class || (desiredClass == ListNBT.class && searchClass == CollectionNBT.class)) {
+                } else if (elementClass == IntArrayTag.class) {
+                    if (desiredClass == ByteArrayTag.class || (desiredClass == ListTag.class && searchClass == CollectionTag.class)) {
                         //If we think we only have byte arrays or a list of shorts but find and int array, promote to an int array
-                        desiredClass = IntArrayNBT.class;
-                    } else if (desiredClass != LongArrayNBT.class) {
-                        if (desiredClass == CompoundNBT.class && searchClass == INBT.class) {
+                        desiredClass = IntArrayTag.class;
+                    } else if (desiredClass != LongArrayTag.class) {
+                        if (desiredClass == CompoundTag.class && searchClass == Tag.class) {
                             //Don't actually return false and instead adjust the type information to matching an int array
                             // if we only have empty NBT compounds so far as they are indistinguishable from arrays.
-                            desiredClass = IntArrayNBT.class;
-                            searchClass = CollectionNBT.class;
+                            desiredClass = IntArrayTag.class;
+                            searchClass = CollectionTag.class;
                         } else {
                             return false;
                         }
                     }
-                } else if (elementClass == LongArrayNBT.class) {
-                    if (desiredClass == ByteArrayNBT.class || desiredClass == IntArrayNBT.class || (desiredClass == ListNBT.class && searchClass == CollectionNBT.class)) {
+                } else if (elementClass == LongArrayTag.class) {
+                    if (desiredClass == ByteArrayTag.class || desiredClass == IntArrayTag.class || (desiredClass == ListTag.class && searchClass == CollectionTag.class)) {
                         //If we have a byte array, int array, or short list, promote our desired type to a long array
-                        desiredClass = LongArrayNBT.class;
-                    } else if (desiredClass == CompoundNBT.class && searchClass == INBT.class) {
+                        desiredClass = LongArrayTag.class;
+                    } else if (desiredClass == CompoundTag.class && searchClass == Tag.class) {
                         //If we instead an empty compound (which is indistinguishable from an empty array)
                         // convert it over to a long array
-                        desiredClass = LongArrayNBT.class;
-                        searchClass = CollectionNBT.class;
+                        desiredClass = LongArrayTag.class;
+                        searchClass = CollectionTag.class;
                     } else {
                         return false;
                     }
-                } else if (elementClass == ListNBT.class) {
-                    byte listType = ((ListNBT) element).getElementType();
-                    if (desiredClass == ByteArrayNBT.class) {
+                } else if (elementClass == ListTag.class) {
+                    byte listType = ((ListTag) element).getElementType();
+                    if (desiredClass == ByteArrayTag.class) {
                         //If we found a short list, and we want byte arrays, switch to a short list
                         // otherwise if we just found a general list we need to transition it all over to a normal list
                         // if we found an empty list (as we are searching for collections), just do nothing as it is compatible with a byte array
-                        if (listType != Constants.NBT.TAG_END) {
-                            desiredClass = ListNBT.class;
-                            if (listType != Constants.NBT.TAG_SHORT) {
-                                searchClass = ListNBT.class;
+                        if (listType != Tag.TAG_END) {
+                            desiredClass = ListTag.class;
+                            if (listType != Tag.TAG_SHORT) {
+                                searchClass = ListTag.class;
                             }
                         }
-                    } else if (desiredClass == IntArrayNBT.class || desiredClass == LongArrayNBT.class) {
+                    } else if (desiredClass == IntArrayTag.class || desiredClass == LongArrayTag.class) {
                         //We can upcast the short into an int or long array and convert empty lists into the corresponding array types
-                        if (listType != Constants.NBT.TAG_END && listType != Constants.NBT.TAG_SHORT) {
+                        if (listType != Tag.TAG_END && listType != Tag.TAG_SHORT) {
                             // but if our list is not a short list then we need to convert the existing arrays we have to lists
-                            desiredClass = ListNBT.class;
-                            searchClass = ListNBT.class;
+                            desiredClass = ListTag.class;
+                            searchClass = ListTag.class;
                         }
-                    } else if (desiredClass == CompoundNBT.class && searchClass == INBT.class) {
+                    } else if (desiredClass == CompoundTag.class && searchClass == Tag.class) {
                         //If we instead an empty compound (which is indistinguishable from an empty list)
                         // convert it over to a list
-                        desiredClass = ListNBT.class;
-                        if (listType == Constants.NBT.TAG_SHORT) {
+                        desiredClass = ListTag.class;
+                        if (listType == Tag.TAG_SHORT) {
                             //If we are a short list search for any collection type
-                            searchClass = CollectionNBT.class;
+                            searchClass = CollectionTag.class;
                         } else {
                             // otherwise, only search for lists
-                            searchClass = ListNBT.class;
+                            searchClass = ListTag.class;
                         }
                     } else {
                         return false;
@@ -947,20 +896,20 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
                 } else {
                     return false;
                 }
-            } else if (elementClass == ListNBT.class) {
+            } else if (elementClass == ListTag.class) {
                 //If we only have short lists
-                if (searchClass == CollectionNBT.class) {
-                    byte listType = ((ListNBT) element).getElementType();
+                if (searchClass == CollectionTag.class) {
+                    byte listType = ((ListTag) element).getElementType();
                     // and our current element is not also a list of shorts or an empty list
-                    if (listType != Constants.NBT.TAG_END && listType != Constants.NBT.TAG_SHORT) {
+                    if (listType != Tag.TAG_END && listType != Tag.TAG_SHORT) {
                         // then we need to convert our search class to only being nbt lists
-                        searchClass = ListNBT.class;
+                        searchClass = ListTag.class;
                     }
                 }
-            } else if (elementClass == CompoundNBT.class) {
+            } else if (elementClass == CompoundTag.class) {
                 //If they are both CompoundNBTs and our element isn't empty, and we have only had empty
                 // compounds so far, then mark that we are a CompoundNBT and not just empty/guessing
-                if (!((CompoundNBT) element).isEmpty() && searchClass == INBT.class) {
+                if (!((CompoundTag) element).isEmpty() && searchClass == Tag.class) {
                     searchClass = elementClass;
                 }
             }
@@ -968,69 +917,69 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
             return true;
         }
 
-        public ListNBT toList() {
-            ListNBT listNBT = new ListNBT();
+        public ListTag toList() {
+            ListTag listNBT = new ListTag();
             //Note: We don't need to special case ByteNBT as there isn't any types that can upcast into it
-            if (desiredClass == ShortNBT.class) {
-                Arrays.stream(elements).map(element -> element instanceof ShortNBT ? element : ShortNBT.valueOf(((NumberNBT) element).getAsShort()))
+            if (desiredClass == ShortTag.class) {
+                Arrays.stream(elements).map(element -> element instanceof ShortTag ? element : ShortTag.valueOf(((NumericTag) element).getAsShort()))
                       .collect(Collectors.toCollection(() -> listNBT));
-            } else if (desiredClass == IntNBT.class) {
-                Arrays.stream(elements).map(element -> element instanceof IntNBT ? element : IntNBT.valueOf(((NumberNBT) element).getAsInt()))
+            } else if (desiredClass == IntTag.class) {
+                Arrays.stream(elements).map(element -> element instanceof IntTag ? element : IntTag.valueOf(((NumericTag) element).getAsInt()))
                       .collect(Collectors.toCollection(() -> listNBT));
-            } else if (desiredClass == LongNBT.class) {
-                Arrays.stream(elements).map(element -> element instanceof LongNBT ? element : LongNBT.valueOf(((NumberNBT) element).getAsLong()))
+            } else if (desiredClass == LongTag.class) {
+                Arrays.stream(elements).map(element -> element instanceof LongTag ? element : LongTag.valueOf(((NumericTag) element).getAsLong()))
                       .collect(Collectors.toCollection(() -> listNBT));
-            } else if (desiredClass == FloatNBT.class) {
-                Arrays.stream(elements).map(element -> element instanceof FloatNBT ? element : FloatNBT.valueOf(((NumberNBT) element).getAsFloat()))
+            } else if (desiredClass == FloatTag.class) {
+                Arrays.stream(elements).map(element -> element instanceof FloatTag ? element : FloatTag.valueOf(((NumericTag) element).getAsFloat()))
                       .collect(Collectors.toCollection(() -> listNBT));
-            } else if (desiredClass == DoubleNBT.class) {
-                Arrays.stream(elements).map(element -> element instanceof DoubleNBT ? element : DoubleNBT.valueOf(((NumberNBT) element).getAsDouble()))
+            } else if (desiredClass == DoubleTag.class) {
+                Arrays.stream(elements).map(element -> element instanceof DoubleTag ? element : DoubleTag.valueOf(((NumericTag) element).getAsDouble()))
                       .collect(Collectors.toCollection(() -> listNBT));
-            } else if (desiredClass == ByteArrayNBT.class) {
-                for (INBT element : elements) {
-                    if (element instanceof ByteArrayNBT) {
+            } else if (desiredClass == ByteArrayTag.class) {
+                for (Tag element : elements) {
+                    if (element instanceof ByteArrayTag) {
                         listNBT.add(element);
-                    } else if (element instanceof CompoundNBT || element instanceof ListNBT) {//Empty compound or empty list
-                        listNBT.add(new ByteArrayNBT(new byte[0]));
+                    } else if (element instanceof CompoundTag || element instanceof ListTag) {//Empty compound or empty list
+                        listNBT.add(new ByteArrayTag(new byte[0]));
                     }
                 }
-            } else if (desiredClass == IntArrayNBT.class) {
-                for (INBT element : elements) {
-                    if (element instanceof IntArrayNBT) {
+            } else if (desiredClass == IntArrayTag.class) {
+                for (Tag element : elements) {
+                    if (element instanceof IntArrayTag) {
                         listNBT.add(element);
-                    } else if (element instanceof ByteArrayNBT) {
-                        byte[] values = ((ByteArrayNBT) element).getAsByteArray();
-                        listNBT.add(new IntArrayNBT(IntStream.range(0, values.length).map(i -> values[i]).toArray()));
-                    } else if (element instanceof CompoundNBT) {//Empty compound
-                        listNBT.add(new IntArrayNBT(new int[0]));
-                    } else if (element instanceof ListNBT) {//List of shorts or empty list
-                        listNBT.add(new IntArrayNBT(((ListNBT) element).stream().mapToInt(nbt -> ((ShortNBT) nbt).getAsInt()).toArray()));
+                    } else if (element instanceof ByteArrayTag tag) {
+                        byte[] values = tag.getAsByteArray();
+                        listNBT.add(new IntArrayTag(IntStream.range(0, values.length).map(i -> values[i]).toArray()));
+                    } else if (element instanceof CompoundTag) {//Empty compound
+                        listNBT.add(new IntArrayTag(new int[0]));
+                    } else if (element instanceof ListTag tag) {//List of shorts or empty list
+                        listNBT.add(new IntArrayTag(tag.stream().mapToInt(nbt -> ((ShortTag) nbt).getAsInt()).toArray()));
                     }
                 }
-            } else if (desiredClass == LongArrayNBT.class) {
-                for (INBT element : elements) {
-                    if (element instanceof LongArrayNBT) {
+            } else if (desiredClass == LongArrayTag.class) {
+                for (Tag element : elements) {
+                    if (element instanceof LongArrayTag) {
                         listNBT.add(element);
-                    } else if (element instanceof IntArrayNBT) {
-                        listNBT.add(new LongArrayNBT(Arrays.stream(((IntArrayNBT) element).getAsIntArray()).asLongStream().toArray()));
-                    } else if (element instanceof ByteArrayNBT) {
-                        byte[] values = ((ByteArrayNBT) element).getAsByteArray();
-                        listNBT.add(new LongArrayNBT(IntStream.range(0, values.length).map(i -> values[i]).asLongStream().toArray()));
-                    } else if (element instanceof CompoundNBT) {//Empty compound
-                        listNBT.add(new LongArrayNBT(new long[0]));
-                    } else if (element instanceof ListNBT) {//List of shorts or empty list
-                        listNBT.add(new LongArrayNBT(((ListNBT) element).stream().mapToLong(nbt -> ((ShortNBT) nbt).getAsLong()).toArray()));
+                    } else if (element instanceof IntArrayTag tag) {
+                        listNBT.add(new LongArrayTag(Arrays.stream(tag.getAsIntArray()).asLongStream().toArray()));
+                    } else if (element instanceof ByteArrayTag tag) {
+                        byte[] values = tag.getAsByteArray();
+                        listNBT.add(new LongArrayTag(IntStream.range(0, values.length).map(i -> values[i]).asLongStream().toArray()));
+                    } else if (element instanceof CompoundTag) {//Empty compound
+                        listNBT.add(new LongArrayTag(new long[0]));
+                    } else if (element instanceof ListTag tag) {//List of shorts or empty list
+                        listNBT.add(new LongArrayTag(tag.stream().mapToLong(nbt -> ((ShortTag) nbt).getAsLong()).toArray()));
                     }
                 }
-            } else if (desiredClass == ListNBT.class) {
-                for (INBT element : elements) {
-                    if (element instanceof ListNBT) {
+            } else if (desiredClass == ListTag.class) {
+                for (Tag element : elements) {
+                    if (element instanceof ListTag) {
                         listNBT.add(element);
-                    } else if (element instanceof CompoundNBT) {//Empty compound
-                        listNBT.add(new ListNBT());
-                    } else if (element instanceof CollectionNBT) {//Byte int or long array
-                        ListNBT byteList = new ListNBT();
-                        byteList.addAll((CollectionNBT<?>) element);
+                    } else if (element instanceof CompoundTag) {//Empty compound
+                        listNBT.add(new ListTag());
+                    } else if (element instanceof CollectionTag<?> tag) {//Byte int or long array
+                        ListTag byteList = new ListTag();
+                        byteList.addAll(tag);
                         listNBT.add(byteList);
                     }
                 }
@@ -1040,17 +989,17 @@ public class CCArgumentWrapper extends ComputerArgumentHandler<LuaException, Met
             return listNBT;
         }
 
-        private static boolean validUpcast(Class<? extends INBT> argument, Class<? extends INBT> target) {
-            if (argument == ByteNBT.class) {
-                return target == ShortNBT.class || target == IntNBT.class || target == LongNBT.class || target == FloatNBT.class || target == DoubleNBT.class;
-            } else if (argument == ShortNBT.class) {
-                return target == IntNBT.class || target == LongNBT.class || target == FloatNBT.class || target == DoubleNBT.class;
-            } else if (argument == IntNBT.class) {
-                return target == LongNBT.class || target == FloatNBT.class || target == DoubleNBT.class;
-            } else if (argument == LongNBT.class) {
-                return target == FloatNBT.class || target == DoubleNBT.class;
-            } else if (argument == FloatNBT.class) {
-                return target == DoubleNBT.class;
+        private static boolean validUpcast(Class<? extends Tag> argument, Class<? extends Tag> target) {
+            if (argument == ByteTag.class) {
+                return target == ShortTag.class || target == IntTag.class || target == LongTag.class || target == FloatTag.class || target == DoubleTag.class;
+            } else if (argument == ShortTag.class) {
+                return target == IntTag.class || target == LongTag.class || target == FloatTag.class || target == DoubleTag.class;
+            } else if (argument == IntTag.class) {
+                return target == LongTag.class || target == FloatTag.class || target == DoubleTag.class;
+            } else if (argument == LongTag.class) {
+                return target == FloatTag.class || target == DoubleTag.class;
+            } else if (argument == FloatTag.class) {
+                return target == DoubleTag.class;
             }
             return false;
         }
