@@ -1,7 +1,6 @@
 package mekanism.common.item.gear;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
@@ -12,6 +11,7 @@ import java.util.function.Consumer;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import mekanism.api.Action;
+import mekanism.api.AutomationType;
 import mekanism.api.chemical.gas.Gas;
 import mekanism.api.chemical.gas.GasStack;
 import mekanism.api.chemical.gas.IGasHandler;
@@ -20,22 +20,22 @@ import mekanism.api.functions.FloatSupplier;
 import mekanism.api.gear.ICustomModule;
 import mekanism.api.gear.ICustomModule.ModuleDamageAbsorbInfo;
 import mekanism.api.gear.IModule;
-import mekanism.api.inventory.AutomationType;
 import mekanism.api.math.FloatingLong;
 import mekanism.api.math.FloatingLongSupplier;
 import mekanism.api.text.EnumColor;
 import mekanism.client.key.MekKeyHandler;
 import mekanism.client.key.MekanismKeyHandler;
-import mekanism.client.render.armor.CustomArmor;
-import mekanism.client.render.armor.MekaSuitArmor;
+import mekanism.client.render.RenderPropertiesProvider;
 import mekanism.common.Mekanism;
 import mekanism.common.MekanismLang;
 import mekanism.common.capabilities.Capabilities;
-import mekanism.common.capabilities.ItemCapabilityWrapper;
+import mekanism.common.capabilities.ItemCapabilityWrapper.ItemCapability;
 import mekanism.common.capabilities.chemical.item.RateLimitMultiTankGasHandler;
 import mekanism.common.capabilities.chemical.item.RateLimitMultiTankGasHandler.GasTankSpec;
 import mekanism.common.capabilities.energy.BasicEnergyContainer;
 import mekanism.common.capabilities.energy.item.RateLimitEnergyHandler;
+import mekanism.common.capabilities.fluid.item.RateLimitMultiTankFluidHandler;
+import mekanism.common.capabilities.fluid.item.RateLimitMultiTankFluidHandler.FluidTankSpec;
 import mekanism.common.capabilities.laser.item.LaserDissipationHandler;
 import mekanism.common.capabilities.radiation.item.RadiationShieldingHandler;
 import mekanism.common.config.MekanismConfig;
@@ -45,35 +45,39 @@ import mekanism.common.content.gear.mekasuit.ModuleJetpackUnit;
 import mekanism.common.content.gear.shared.ModuleEnergyUnit;
 import mekanism.common.item.gear.ItemJetpack.JetpackMode;
 import mekanism.common.item.interfaces.IModeItem;
+import mekanism.common.registries.MekanismFluids;
 import mekanism.common.registries.MekanismGases;
 import mekanism.common.registries.MekanismModules;
 import mekanism.common.util.StorageUtils;
-import net.minecraft.client.util.ITooltipFlag;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.monster.EndermanEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.inventory.EquipmentSlotType;
-import net.minecraft.item.ArmorMaterial;
-import net.minecraft.item.ItemGroup;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.ItemStack.TooltipDisplayFlags;
-import net.minecraft.item.Rarity;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.util.DamageSource;
-import net.minecraft.util.NonNullList;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.world.World;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.common.capabilities.ICapabilityProvider;
+import net.minecraft.core.NonNullList;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.damagesource.DamageSource;
+import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.monster.EnderMan;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.ArmorMaterials;
+import net.minecraft.world.item.CreativeModeTab;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.ItemStack.TooltipPart;
+import net.minecraft.world.item.Rarity;
+import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.gameevent.GameEvent;
+import net.minecraftforge.client.IItemRenderProperties;
+import net.minecraftforge.fluids.FluidStack;
+import net.minecraftforge.fluids.FluidUtil;
+import net.minecraftforge.fluids.capability.IFluidHandlerItem;
 
 public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContainerItem, IModeItem {
 
-    private static final Set<DamageSource> ALWAYS_SUPPORTED_SOURCES = new LinkedHashSet<>(Arrays.asList(
+    private static final Set<DamageSource> ALWAYS_SUPPORTED_SOURCES = new LinkedHashSet<>(List.of(
           DamageSource.ANVIL, DamageSource.CACTUS, DamageSource.CRAMMING, DamageSource.DRAGON_BREATH, DamageSource.DRY_OUT,
           DamageSource.FALL, DamageSource.FALLING_BLOCK, DamageSource.FLY_INTO_WALL, DamageSource.GENERIC,
           DamageSource.HOT_FLOOR, DamageSource.IN_FIRE, DamageSource.IN_WALL, DamageSource.LAVA, DamageSource.LIGHTNING_BOLT,
-          DamageSource.ON_FIRE, DamageSource.SWEET_BERRY_BUSH, DamageSource.WITHER));
+          DamageSource.ON_FIRE, DamageSource.SWEET_BERRY_BUSH, DamageSource.WITHER, DamageSource.FREEZE, DamageSource.FALLING_STALACTITE,
+          DamageSource.STALAGMITE));
 
     public static Set<DamageSource> getSupportedSources() {
         return Collections.unmodifiableSet(ALWAYS_SUPPORTED_SOURCES);
@@ -81,31 +85,34 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
 
     private static final MekaSuitMaterial MEKASUIT_MATERIAL = new MekaSuitMaterial();
 
+    //TODO: Expand this system so that modules can maybe define needed tanks?
     private final Set<GasTankSpec> gasTankSpecs = new HashSet<>();
+    private final Set<FluidTankSpec> fluidTankSpecs = new HashSet<>();
     private final float absorption;
     //Full laser dissipation causes 3/4 of the energy to be dissipated and the remaining energy to be refracted
     private final double laserDissipation;
     private final double laserRefraction;
 
-    public ItemMekaSuitArmor(EquipmentSlotType slot, Properties properties) {
+    public ItemMekaSuitArmor(EquipmentSlot slot, Properties properties) {
         super(MEKASUIT_MATERIAL, slot, properties.rarity(Rarity.EPIC).setNoRepair().stacksTo(1));
-        if (slot == EquipmentSlotType.HEAD) {
-            gasTankSpecs.add(GasTankSpec.createFillOnly(MekanismConfig.gear.mekaSuitNutritionalTransferRate, MekanismConfig.gear.mekaSuitNutritionalMaxStorage,
-                  (gas, automationType, stack) -> hasModule(stack, MekanismModules.NUTRITIONAL_INJECTION_UNIT), gas -> gas == MekanismGases.NUTRITIONAL_PASTE.get()));
+        if (slot == EquipmentSlot.HEAD) {
+            fluidTankSpecs.add(FluidTankSpec.createFillOnly(MekanismConfig.gear.mekaSuitNutritionalTransferRate, MekanismConfig.gear.mekaSuitNutritionalMaxStorage,
+                  (gas, automationType, stack) -> hasModule(stack, MekanismModules.NUTRITIONAL_INJECTION_UNIT),
+                  fluid -> fluid.getFluid() == MekanismFluids.NUTRITIONAL_PASTE.getFluid()));
             absorption = 0.15F;
             laserDissipation = 0.15;
             laserRefraction = 0.2;
-        } else if (slot == EquipmentSlotType.CHEST) {
+        } else if (slot == EquipmentSlot.CHEST) {
             gasTankSpecs.add(GasTankSpec.createFillOnly(MekanismConfig.gear.mekaSuitJetpackTransferRate, MekanismConfig.gear.mekaSuitJetpackMaxStorage,
                   (gas, automationType, stack) -> hasModule(stack, MekanismModules.JETPACK_UNIT), gas -> gas == MekanismGases.HYDROGEN.get()));
             absorption = 0.4F;
             laserDissipation = 0.3;
             laserRefraction = 0.4;
-        } else if (slot == EquipmentSlotType.LEGS) {
+        } else if (slot == EquipmentSlot.LEGS) {
             absorption = 0.3F;
             laserDissipation = 0.1875;
             laserRefraction = 0.25;
-        } else if (slot == EquipmentSlotType.FEET) {
+        } else if (slot == EquipmentSlot.FEET) {
             absorption = 0.15F;
             laserDissipation = 0.1125;
             laserRefraction = 0.15;
@@ -115,20 +122,27 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
     }
 
     @Override
+    public void initializeClient(@Nonnull Consumer<IItemRenderProperties> consumer) {
+        consumer.accept(RenderPropertiesProvider.mekaSuit());
+    }
+
+    @Override
     public <T extends LivingEntity> int damageItem(ItemStack stack, int amount, T entity, Consumer<T> onBroken) {
         // safety check
         return 0;
     }
 
     @Override
-    @OnlyIn(Dist.CLIENT)
-    public void appendHoverText(@Nonnull ItemStack stack, World world, @Nonnull List<ITextComponent> tooltip, @Nonnull ITooltipFlag flag) {
+    public void appendHoverText(@Nonnull ItemStack stack, Level world, @Nonnull List<Component> tooltip, @Nonnull TooltipFlag flag) {
         if (MekKeyHandler.isKeyPressed(MekanismKeyHandler.detailsKey)) {
             addModuleDetails(stack, tooltip);
         } else {
             StorageUtils.addStoredEnergy(stack, tooltip, true);
             if (!gasTankSpecs.isEmpty()) {
                 StorageUtils.addStoredGas(stack, tooltip, true, false);
+            }
+            if (!fluidTankSpecs.isEmpty()) {
+                StorageUtils.addStoredFluid(stack, tooltip, true);
             }
             tooltip.add(MekanismLang.HOLD_FOR_MODULES.translateColored(EnumColor.GRAY, EnumColor.INDIGO, MekanismKeyHandler.detailsKey.getTranslatedKeyMessage()));
         }
@@ -140,23 +154,28 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
     }
 
     @Override
-    public boolean isEnderMask(@Nonnull ItemStack stack, @Nonnull PlayerEntity player, @Nonnull EndermanEntity enderman) {
-        return getSlot() == EquipmentSlotType.HEAD;
+    public boolean isEnderMask(@Nonnull ItemStack stack, @Nonnull Player player, @Nonnull EnderMan enderman) {
+        return getSlot() == EquipmentSlot.HEAD;
     }
 
     @Override
-    public boolean showDurabilityBar(ItemStack stack) {
+    public boolean canWalkOnPowderedSnow(@Nonnull ItemStack stack, @Nonnull LivingEntity wearer) {
+        return getSlot() == EquipmentSlot.FEET;
+    }
+
+    @Override
+    public boolean isBarVisible(@Nonnull ItemStack stack) {
         return true;
     }
 
     @Override
-    public double getDurabilityForDisplay(ItemStack stack) {
+    public int getBarWidth(@Nonnull ItemStack stack) {
         //TODO: Eventually look into making it so that we can have a "secondary durability" bar for rendering things like stored gas
-        return StorageUtils.getEnergyDurabilityForDisplay(stack);
+        return StorageUtils.getEnergyBarWidth(stack);
     }
 
     @Override
-    public int getRGBDurabilityForDisplay(ItemStack stack) {
+    public int getBarColor(@Nonnull ItemStack stack) {
         return MekanismConfig.client.energyColor.get();
     }
 
@@ -166,7 +185,7 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
     }
 
     @Override
-    public void fillItemCategory(@Nonnull ItemGroup group, @Nonnull NonNullList<ItemStack> items) {
+    public void fillItemCategory(@Nonnull CreativeModeTab group, @Nonnull NonNullList<ItemStack> items) {
         super.fillItemCategory(group, items);
         if (allowdedIn(group)) {
             ItemStack stack = new ItemStack(this);
@@ -175,7 +194,7 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
     }
 
     @Override
-    public void onArmorTick(ItemStack stack, World world, PlayerEntity player) {
+    public void onArmorTick(ItemStack stack, Level world, Player player) {
         super.onArmorTick(stack, world, player);
         for (Module<?> module : getModules(stack)) {
             module.tick(player);
@@ -183,19 +202,27 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
     }
 
     @Override
-    public ICapabilityProvider initCapabilities(ItemStack stack, CompoundNBT nbt) {
-        stack.hideTooltipPart(TooltipDisplayFlags.MODIFIERS);
+    public int getDefaultTooltipHideFlags(@Nonnull ItemStack stack) {
+        return super.getDefaultTooltipHideFlags(stack) | TooltipPart.MODIFIERS.getMask();
+    }
+
+    @Override
+    protected void gatherCapabilities(List<ItemCapability> capabilities, ItemStack stack, CompoundTag nbt) {
+        super.gatherCapabilities(capabilities, stack, nbt);
         //Note: We interact with this capability using "manual" as the automation type, to ensure we can properly bypass the energy limit for extracting
         // Internal is used by the "null" side, which is what will get used for most items
-        ItemCapabilityWrapper wrapper = new ItemCapabilityWrapper(stack, RateLimitEnergyHandler.create(() -> getChargeRate(stack), () -> getMaxEnergy(stack),
-              BasicEnergyContainer.manualOnly, BasicEnergyContainer.alwaysTrue),
-              RadiationShieldingHandler.create(item -> isModuleEnabled(item, MekanismModules.RADIATION_SHIELDING_UNIT) ? ItemHazmatSuitArmor.getShieldingByArmor(slot) : 0),
-              LaserDissipationHandler.create(item -> isModuleEnabled(item, MekanismModules.LASER_DISSIPATION_UNIT) ? laserDissipation : 0,
+        capabilities.add(RateLimitEnergyHandler.create(() -> getChargeRate(stack), () -> getMaxEnergy(stack), BasicEnergyContainer.manualOnly,
+              BasicEnergyContainer.alwaysTrue));
+        capabilities.add(RadiationShieldingHandler.create(item -> isModuleEnabled(item, MekanismModules.RADIATION_SHIELDING_UNIT) ?
+                                                                  ItemHazmatSuitArmor.getShieldingByArmor(slot) : 0));
+        capabilities.add(LaserDissipationHandler.create(item -> isModuleEnabled(item, MekanismModules.LASER_DISSIPATION_UNIT) ? laserDissipation : 0,
                     item -> isModuleEnabled(item, MekanismModules.LASER_DISSIPATION_UNIT) ? laserRefraction : 0));
         if (!gasTankSpecs.isEmpty()) {
-            wrapper.add(RateLimitMultiTankGasHandler.create(gasTankSpecs));
+            capabilities.add(RateLimitMultiTankGasHandler.create(gasTankSpecs));
         }
-        return wrapper;
+        if (!fluidTankSpecs.isEmpty()) {
+            capabilities.add(RateLimitMultiTankFluidHandler.create(fluidTankSpecs));
+        }
     }
 
     @Nonnull
@@ -222,8 +249,22 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
         return GasStack.EMPTY;
     }
 
+    public FluidStack getContainedFluid(ItemStack stack, FluidStack type) {
+        Optional<IFluidHandlerItem> capability = FluidUtil.getFluidHandler(stack).resolve();
+        if (capability.isPresent()) {
+            IFluidHandlerItem fluidHandlerItem = capability.get();
+            for (int i = 0; i < fluidHandlerItem.getTanks(); i++) {
+                FluidStack fluidInTank = fluidHandlerItem.getFluidInTank(i);
+                if (fluidInTank.isFluidEqual(type)) {
+                    return fluidInTank;
+                }
+            }
+        }
+        return FluidStack.EMPTY;
+    }
+
     @Override
-    public void changeMode(@Nonnull PlayerEntity player, @Nonnull ItemStack stack, int shift, boolean displayChangeMessage) {
+    public void changeMode(@Nonnull Player player, @Nonnull ItemStack stack, int shift, boolean displayChangeMessage) {
         for (Module<?> module : getModules(stack)) {
             if (module.handlesModeChange()) {
                 module.changeMode(player, stack, shift, displayChangeMessage);
@@ -233,13 +274,13 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
     }
 
     @Override
-    public boolean supportsSlotType(ItemStack stack, @Nonnull EquipmentSlotType slotType) {
+    public boolean supportsSlotType(ItemStack stack, @Nonnull EquipmentSlot slotType) {
         return slotType == getSlot() && getModules(stack).stream().anyMatch(Module::handlesModeChange);
     }
 
     @Override
     public boolean canElytraFly(ItemStack stack, LivingEntity entity) {
-        if (slot == EquipmentSlotType.CHEST && !entity.isShiftKeyDown()) {
+        if (slot == EquipmentSlot.CHEST && !entity.isShiftKeyDown()) {
             //Don't allow elytra flight if the player is sneaking. This lets the player exit elytra flight early
             IModule<?> module = getModule(stack, MekanismModules.ELYTRA_UNIT);
             if (module != null && module.isEnabled() && module.canUseEnergy(entity, MekanismConfig.gear.mekaSuitElytraEnergyUsage.get())) {
@@ -257,29 +298,19 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
     public boolean elytraFlightTick(ItemStack stack, LivingEntity entity, int flightTicks) {
         //Note: As canElytraFly is checked just before this we don't bother validating ahead of time we have the energy
         // or that we are the correct slot
-        if (!entity.level.isClientSide && (flightTicks + 1) % 20 == 0) {
-            IModule<?> module = getModule(stack, MekanismModules.ELYTRA_UNIT);
-            if (module != null && module.isEnabled()) {
-                module.useEnergy(entity, MekanismConfig.gear.mekaSuitElytraEnergyUsage.get());
+        if (!entity.level.isClientSide) {
+            int nextFlightTicks = flightTicks + 1;
+            if (nextFlightTicks % 10 == 0) {
+                if (nextFlightTicks % 20 == 0) {
+                    IModule<?> module = getModule(stack, MekanismModules.ELYTRA_UNIT);
+                    if (module != null && module.isEnabled()) {
+                        module.useEnergy(entity, MekanismConfig.gear.mekaSuitElytraEnergyUsage.get());
+                    }
+                }
+                entity.gameEvent(GameEvent.ELYTRA_FREE_FALL);
             }
         }
         return true;
-    }
-
-    @Nonnull
-    @Override
-    @OnlyIn(Dist.CLIENT)
-    public CustomArmor getGearModel() {
-        switch (getSlot()) {
-            case HEAD:
-                return MekaSuitArmor.HELMET;
-            case CHEST:
-                return MekaSuitArmor.BODYARMOR;
-            case LEGS:
-                return MekaSuitArmor.PANTS;
-            default:
-                return MekaSuitArmor.BOOTS;
-        }
     }
 
     private FloatingLong getMaxEnergy(ItemStack stack) {
@@ -292,11 +323,11 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
         return module == null ? MekanismConfig.gear.mekaSuitBaseChargeRate.get() : module.getCustomInstance().getChargeRate(module);
     }
 
-    public static float getDamageAbsorbed(PlayerEntity player, DamageSource source, float amount) {
+    public static float getDamageAbsorbed(Player player, DamageSource source, float amount) {
         return getDamageAbsorbed(player, source, amount, null);
     }
 
-    public static boolean tryAbsorbAll(PlayerEntity player, DamageSource source, float amount) {
+    public static boolean tryAbsorbAll(Player player, DamageSource source, float amount) {
         List<Runnable> energyUsageCallbacks = new ArrayList<>(4);
         if (getDamageAbsorbed(player, source, amount, energyUsageCallbacks) >= 1) {
             //If we can fully absorb it, actually use the energy from the various pieces and then return that we absorbed it all
@@ -308,25 +339,25 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
         return false;
     }
 
-    private static float getDamageAbsorbed(PlayerEntity player, DamageSource source, float amount, @Nullable List<Runnable> energyUseCallbacks) {
+    private static float getDamageAbsorbed(Player player, DamageSource source, float amount, @Nullable List<Runnable> energyUseCallbacks) {
         if (amount <= 0) {
             return 0;
         }
         float ratioAbsorbed = 0;
         List<FoundArmorDetails> armorDetails = new ArrayList<>();
         //Start by looping the armor, allowing modules to absorb damage if they can
-        for (ItemStack stack : player.inventory.armor) {
-            if (!stack.isEmpty() && stack.getItem() instanceof ItemMekaSuitArmor) {
+        for (ItemStack stack : player.getArmorSlots()) {
+            if (!stack.isEmpty() && stack.getItem() instanceof ItemMekaSuitArmor armor) {
                 IEnergyContainer energyContainer = StorageUtils.getEnergyContainer(stack, 0);
                 if (energyContainer != null) {
-                    FoundArmorDetails details = new FoundArmorDetails(energyContainer, (ItemMekaSuitArmor) stack.getItem());
+                    FoundArmorDetails details = new FoundArmorDetails(energyContainer, armor);
                     armorDetails.add(details);
                     for (Module<?> module : details.armor.getModules(stack)) {
                         if (module.isEnabled()) {
                             ModuleDamageAbsorbInfo damageAbsorbInfo = getModuleDamageAbsorbInfo(module, source);
                             if (damageAbsorbInfo != null) {
-                                float absorption = damageAbsorbInfo.getAbsorptionRatio().getAsFloat();
-                                ratioAbsorbed += absorbDamage(details.usageInfo, amount, absorption, ratioAbsorbed, damageAbsorbInfo.getEnergyCost());
+                                float absorption = damageAbsorbInfo.absorptionRatio().getAsFloat();
+                                ratioAbsorbed += absorbDamage(details.usageInfo, amount, absorption, ratioAbsorbed, damageAbsorbInfo.energyCost());
                                 if (ratioAbsorbed >= 1) {
                                     //If we have fully absorbed the damage, stop checking/trying to absorb more
                                     break;
@@ -413,7 +444,6 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
         return 0;
     }
 
-    //TODO - 1.18: Switch this to a record
     private static class FoundArmorDetails {
 
         private final IEnergyContainer energyContainer;
@@ -442,18 +472,18 @@ public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContai
     protected static class MekaSuitMaterial extends BaseSpecialArmorMaterial {
 
         @Override
-        public int getDefenseForSlot(@Nonnull EquipmentSlotType slot) {
-            return ArmorMaterial.NETHERITE.getDefenseForSlot(slot);
+        public int getDefenseForSlot(@Nonnull EquipmentSlot slot) {
+            return ArmorMaterials.NETHERITE.getDefenseForSlot(slot);
         }
 
         @Override
         public float getToughness() {
-            return ArmorMaterial.NETHERITE.getToughness();
+            return ArmorMaterials.NETHERITE.getToughness();
         }
 
         @Override
         public float getKnockbackResistance() {
-            return ArmorMaterial.NETHERITE.getKnockbackResistance();
+            return ArmorMaterials.NETHERITE.getKnockbackResistance();
         }
 
         @Nonnull
