@@ -1,13 +1,12 @@
 package mekanism.common.network.to_server;
 
-import com.google.common.collect.ImmutableMap;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
+import mekanism.api.MekanismAPI;
 import mekanism.api.providers.IRobitSkinProvider;
 import mekanism.api.robit.RobitSkin;
 import mekanism.api.text.TextComponentUtil;
@@ -15,16 +14,13 @@ import mekanism.common.entity.EntityRobit;
 import mekanism.common.network.BasePacketHandler;
 import mekanism.common.network.IMekanismPacket;
 import mekanism.common.registries.MekanismRobitSkins;
-import mekanism.common.util.SecurityUtils;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.network.PacketBuffer;
-import net.minecraftforge.fml.network.NetworkEvent;
+import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.world.entity.player.Player;
+import net.minecraftforge.network.NetworkEvent;
 
 public class PacketRobit implements IMekanismPacket {
 
-    private static final Map<String, List<IRobitSkinProvider>> EASTER_EGGS = ImmutableMap.<String, List<IRobitSkinProvider>>builder()
-          .put("sara", Arrays.asList(MekanismRobitSkins.LESBIAN, MekanismRobitSkins.TRANS))//TODO - 1.18: Make this use Lists.of(...)
-          .build();
+    private static final Map<String, List<IRobitSkinProvider>> EASTER_EGGS = Map.of("sara", List.of(MekanismRobitSkins.LESBIAN, MekanismRobitSkins.TRANS));
 
     private final RobitPacketType activeType;
     private final int entityId;
@@ -56,10 +52,10 @@ public class PacketRobit implements IMekanismPacket {
 
     @Override
     public void handle(NetworkEvent.Context context) {
-        PlayerEntity player = context.getSender();
+        Player player = context.getSender();
         if (player != null) {
             EntityRobit robit = (EntityRobit) player.level.getEntity(entityId);
-            if (robit != null && SecurityUtils.canAccess(player, robit)) {
+            if (robit != null && MekanismAPI.getSecurityUtils().canAccess(player, robit)) {
                 if (activeType == RobitPacketType.GO_HOME) {
                     robit.goHome();
                 } else if (activeType == RobitPacketType.FOLLOW) {
@@ -89,7 +85,7 @@ public class PacketRobit implements IMekanismPacket {
     }
 
     @Override
-    public void encode(PacketBuffer buffer) {
+    public void encode(FriendlyByteBuf buffer) {
         buffer.writeEnum(activeType);
         buffer.writeVarInt(entityId);
         if (activeType == RobitPacketType.NAME) {
@@ -99,7 +95,7 @@ public class PacketRobit implements IMekanismPacket {
         }
     }
 
-    public static PacketRobit decode(PacketBuffer buffer) {
+    public static PacketRobit decode(FriendlyByteBuf buffer) {
         RobitPacketType activeType = buffer.readEnum(RobitPacketType.class);
         int entityId = buffer.readVarInt();
         String name = null;
