@@ -1,6 +1,5 @@
 package mekanism.common.tile.component.config.slot;
 
-import java.util.Arrays;
 import java.util.List;
 import mekanism.api.energy.IEnergyContainer;
 
@@ -9,7 +8,7 @@ public class EnergySlotInfo extends BaseSlotInfo {
     private final List<IEnergyContainer> containers;
 
     public EnergySlotInfo(boolean canInput, boolean canOutput, IEnergyContainer... containers) {
-        this(canInput, canOutput, Arrays.asList(containers));
+        this(canInput, canOutput, List.of(containers));
     }
 
     public EnergySlotInfo(boolean canInput, boolean canOutput, List<IEnergyContainer> containers) {
