@@ -1,6 +1,5 @@
 package mekanism.common.tile.component.config.slot;
 
-import java.util.Arrays;
 import java.util.List;
 import mekanism.api.fluid.IExtendedFluidTank;
 
@@ -9,7 +8,7 @@ public class FluidSlotInfo extends BaseSlotInfo {
     private final List<IExtendedFluidTank> tanks;
 
     public FluidSlotInfo(boolean canInput, boolean canOutput, IExtendedFluidTank... tanks) {
-        this(canInput, canOutput, Arrays.asList(tanks));
+        this(canInput, canOutput, List.of(tanks));
     }
 
     public FluidSlotInfo(boolean canInput, boolean canOutput, List<IExtendedFluidTank> tanks) {
