@@ -1,6 +1,5 @@
 package mekanism.common.tile.component.config.slot;
 
-import java.util.Arrays;
 import java.util.List;
 import mekanism.api.heat.IHeatCapacitor;
 
@@ -9,7 +8,7 @@ public class HeatSlotInfo extends BaseSlotInfo {
     private final List<IHeatCapacitor> capacitors;
 
     protected HeatSlotInfo(boolean canInput, boolean canOutput, IHeatCapacitor... capacitors) {
-        this(canInput, canOutput, Arrays.asList(capacitors));
+        this(canInput, canOutput, List.of(capacitors));
     }
 
     public HeatSlotInfo(boolean canInput, boolean canOutput, List<IHeatCapacitor> capacitors) {
