@@ -4,21 +4,21 @@ import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import javax.annotation.Nullable;
-import net.minecraft.nbt.ByteArrayNBT;
-import net.minecraft.nbt.ByteNBT;
-import net.minecraft.nbt.CollectionNBT;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.nbt.DoubleNBT;
-import net.minecraft.nbt.FloatNBT;
-import net.minecraft.nbt.INBT;
-import net.minecraft.nbt.IntArrayNBT;
-import net.minecraft.nbt.IntNBT;
-import net.minecraft.nbt.ListNBT;
-import net.minecraft.nbt.LongArrayNBT;
-import net.minecraft.nbt.LongNBT;
-import net.minecraft.nbt.NumberNBT;
-import net.minecraft.nbt.ShortNBT;
-import net.minecraft.nbt.StringNBT;
+import net.minecraft.nbt.ByteArrayTag;
+import net.minecraft.nbt.ByteTag;
+import net.minecraft.nbt.CollectionTag;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.DoubleTag;
+import net.minecraft.nbt.FloatTag;
+import net.minecraft.nbt.IntArrayTag;
+import net.minecraft.nbt.IntTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.LongArrayTag;
+import net.minecraft.nbt.LongTag;
+import net.minecraft.nbt.NumericTag;
+import net.minecraft.nbt.ShortTag;
+import net.minecraft.nbt.StringTag;
+import net.minecraft.nbt.Tag;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.quicktheories.QuickTheory;
@@ -75,609 +75,609 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     // Bytes
     // ===================
     @Test
-    @DisplayName("Test serializing and deserializing bytes with ByteNBT target and no hints")
+    @DisplayName("Test serializing and deserializing bytes with ByteTag target and no hints")
     void testBytes() {
-        qt().forAll(allBytes()).as(ByteNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
+        qt().forAll(allBytes()).as(ByteTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing bytes with INBT target and no hints")
-    void testBytesINBT() {
-        qt().forAll(allBytes()).as(ByteNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, false));
+    @DisplayName("Test serializing and deserializing bytes with Tag target and no hints")
+    void testBytesTag() {
+        qt().forAll(allBytes()).as(ByteTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing bytes with NumberNBT target and no hints")
-    void testBytesNumberNBT() {
-        qt().forAll(allBytes()).as(ByteNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumberNBT.class, false));
+    @DisplayName("Test serializing and deserializing bytes with NumericTag target and no hints")
+    void testBytesNumericTag() {
+        qt().forAll(allBytes()).as(ByteTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumericTag.class, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing bytes with ByteNBT target and type hints")
+    @DisplayName("Test serializing and deserializing bytes with ByteTag target and type hints")
     void testBytesWithHint() {
-        qt().forAll(allBytes()).as(ByteNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
+        qt().forAll(allBytes()).as(ByteTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing bytes with INBT target and type hints")
-    void testBytesINBTWithHint() {
-        qt().forAll(allBytes()).as(ByteNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, true));
+    @DisplayName("Test serializing and deserializing bytes with Tag target and type hints")
+    void testBytesTagWithHint() {
+        qt().forAll(allBytes()).as(ByteTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing bytes with NumberNBT target and type hints")
-    void testBytesNumberNBTWithHint() {
-        qt().forAll(allBytes()).as(ByteNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumberNBT.class, true));
+    @DisplayName("Test serializing and deserializing bytes with NumericTag target and type hints")
+    void testBytesNumericTagWithHint() {
+        qt().forAll(allBytes()).as(ByteTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumericTag.class, true));
     }
 
     // ===================
     // Shorts
     // ===================
-    private boolean checkSameShort(short value, @Nullable Class<? extends INBT> targetClass) {
-        ShortNBT nbt = ShortNBT.valueOf(value);
+    private boolean checkSameShort(short value, @Nullable Class<? extends Tag> targetClass) {
+        ShortTag nbt = ShortTag.valueOf(value);
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, false);
         if (value < Byte.MIN_VALUE || value > Byte.MAX_VALUE) {
             return nbt.equals(sanitized);
         }
-        return ByteNBT.valueOf((byte) value).equals(sanitized);
+        return ByteTag.valueOf((byte) value).equals(sanitized);
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing shorts with ShortNBT target and no hints")
+    @DisplayName("Test serializing and deserializing shorts with ShortTag target and no hints")
     void testShorts() {
-        qt().forAll(allShorts()).as(ShortNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
+        qt().forAll(allShorts()).as(ShortTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing shorts with INBT target and no hints")
-    void testShortsINBT() {
-        qt().forAll(allShorts()).check(value -> checkSameShort(value, INBT.class));
+    @DisplayName("Test serializing and deserializing shorts with Tag target and no hints")
+    void testShortsTag() {
+        qt().forAll(allShorts()).check(value -> checkSameShort(value, Tag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing shorts with NumberNBT target and no hints")
-    void testShortsNumberNBT() {
-        qt().forAll(allShorts()).check(value -> checkSameShort(value, NumberNBT.class));
+    @DisplayName("Test serializing and deserializing shorts with NumericTag target and no hints")
+    void testShortsNumericTag() {
+        qt().forAll(allShorts()).check(value -> checkSameShort(value, NumericTag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing shorts with ShortNBT target and type hints")
+    @DisplayName("Test serializing and deserializing shorts with ShortTag target and type hints")
     void testShortsWithHint() {
-        qt().forAll(allShorts()).as(ShortNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
+        qt().forAll(allShorts()).as(ShortTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing shorts with INBT target and type hints")
-    void testShortsINBTWithHint() {
-        qt().forAll(allShorts()).as(ShortNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, true));
+    @DisplayName("Test serializing and deserializing shorts with Tag target and type hints")
+    void testShortsTagWithHint() {
+        qt().forAll(allShorts()).as(ShortTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing shorts with NumberNBT target and type hints")
-    void testShortsNumberNBTWithHint() {
-        qt().forAll(allShorts()).as(ShortNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumberNBT.class, true));
+    @DisplayName("Test serializing and deserializing shorts with NumericTag target and type hints")
+    void testShortsNumericTagWithHint() {
+        qt().forAll(allShorts()).as(ShortTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumericTag.class, true));
     }
 
     // ===================
     // Ints
     // ===================
-    private boolean checkSameInt(int value, @Nullable Class<? extends INBT> targetClass) {
-        IntNBT nbt = IntNBT.valueOf(value);
+    private boolean checkSameInt(int value, @Nullable Class<? extends Tag> targetClass) {
+        IntTag nbt = IntTag.valueOf(value);
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, false);
         if (value < Short.MIN_VALUE || value > Short.MAX_VALUE) {
             return nbt.equals(sanitized);
         } else if (value < Byte.MIN_VALUE || value > Byte.MAX_VALUE) {
-            return ShortNBT.valueOf((short) value).equals(sanitized);
+            return ShortTag.valueOf((short) value).equals(sanitized);
         }
-        return ByteNBT.valueOf((byte) value).equals(sanitized);
+        return ByteTag.valueOf((byte) value).equals(sanitized);
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing ints with IntNBT target and no hints")
+    @DisplayName("Test serializing and deserializing ints with IntTag target and no hints")
     void testInts() {
-        qt().forAll(integers().all()).as(IntNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
+        qt().forAll(integers().all()).as(IntTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing ints with INBT target and no hints")
-    void testIntsINBT() {
-        qt().forAll(integers().all()).check(value -> checkSameInt(value, INBT.class));
+    @DisplayName("Test serializing and deserializing ints with Tag target and no hints")
+    void testIntsTag() {
+        qt().forAll(integers().all()).check(value -> checkSameInt(value, Tag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing ints with NumberNBT target and no hints")
-    void testIntsNumberNBT() {
-        qt().forAll(integers().all()).check(value -> checkSameInt(value, NumberNBT.class));
+    @DisplayName("Test serializing and deserializing ints with NumericTag target and no hints")
+    void testIntsNumericTag() {
+        qt().forAll(integers().all()).check(value -> checkSameInt(value, NumericTag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing ints with IntNBT target and type hints")
+    @DisplayName("Test serializing and deserializing ints with IntTag target and type hints")
     void testIntsWithHint() {
-        qt().forAll(integers().all()).as(IntNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
+        qt().forAll(integers().all()).as(IntTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing ints with INBT target and type hints")
-    void testIntsINBTWithHint() {
-        qt().forAll(integers().all()).as(IntNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, true));
+    @DisplayName("Test serializing and deserializing ints with Tag target and type hints")
+    void testIntsTagWithHint() {
+        qt().forAll(integers().all()).as(IntTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing ints with NumberNBT target and type hints")
-    void testIntsNumberNBTWithHint() {
-        qt().forAll(integers().all()).as(IntNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumberNBT.class, true));
+    @DisplayName("Test serializing and deserializing ints with NumericTag target and type hints")
+    void testIntsNumericTagWithHint() {
+        qt().forAll(integers().all()).as(IntTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumericTag.class, true));
     }
 
     // ===================
     // Longs
     // ===================
-    private LongNBT getExpected(long l) {
+    private LongTag getExpected(long l) {
         //Adjust for floating point accuracy as needed
         if (l != (long) (double) l) {
-            return LongNBT.valueOf((long) (double) l);
+            return LongTag.valueOf((long) (double) l);
         }
-        return LongNBT.valueOf(l);
+        return LongTag.valueOf(l);
     }
 
-    private boolean checkSameLong(long value, @Nullable Class<? extends INBT> targetClass) {
-        LongNBT nbt = LongNBT.valueOf(value);
+    private boolean checkSameLong(long value, @Nullable Class<? extends Tag> targetClass) {
+        LongTag nbt = LongTag.valueOf(value);
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, false);
         if (value < Integer.MIN_VALUE || value > Integer.MAX_VALUE) {
             return getExpected(value).equals(sanitized);
         } else if (value < Short.MIN_VALUE || value > Short.MAX_VALUE) {
-            return IntNBT.valueOf((int) value).equals(sanitized);
+            return IntTag.valueOf((int) value).equals(sanitized);
         } else if (value < Byte.MIN_VALUE || value > Byte.MAX_VALUE) {
-            return ShortNBT.valueOf((short) value).equals(sanitized);
+            return ShortTag.valueOf((short) value).equals(sanitized);
         }
-        return ByteNBT.valueOf((byte) value).equals(sanitized);
+        return ByteTag.valueOf((byte) value).equals(sanitized);
     }
 
-    private boolean checkSameLong(long value, @Nullable Class<? extends INBT> targetClass, boolean includeHints) {
-        LongNBT nbt = LongNBT.valueOf(value);
+    private boolean checkSameLong(long value, @Nullable Class<? extends Tag> targetClass, boolean includeHints) {
+        LongTag nbt = LongTag.valueOf(value);
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, includeHints);
         return getExpected(value).equals(sanitized);
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing longs with LongNBT target and no hints")
+    @DisplayName("Test serializing and deserializing longs with LongTag target and no hints")
     void testLongs() {
         qt().forAll(longs().all()).check(value -> checkSameLong(value, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing longs with INBT target and no hints")
-    void testLongsINBT() {
-        qt().forAll(longs().all()).check(value -> checkSameLong(value, INBT.class));
+    @DisplayName("Test serializing and deserializing longs with Tag target and no hints")
+    void testLongsTag() {
+        qt().forAll(longs().all()).check(value -> checkSameLong(value, Tag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing longs with NumberNBT target and no hints")
-    void testLongsNumberNBT() {
-        qt().forAll(longs().all()).check(value -> checkSameLong(value, NumberNBT.class));
+    @DisplayName("Test serializing and deserializing longs with NumericTag target and no hints")
+    void testLongsNumericTag() {
+        qt().forAll(longs().all()).check(value -> checkSameLong(value, NumericTag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing longs with LongNBT target and type hints")
+    @DisplayName("Test serializing and deserializing longs with LongTag target and type hints")
     void testLongsWithHint() {
         qt().forAll(longs().all()).check(value -> checkSameLong(value, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing longs with INBT target and type hints")
-    void testLongsINBTWithHint() {
-        qt().forAll(longs().all()).check(value -> checkSameLong(value, INBT.class, true));
+    @DisplayName("Test serializing and deserializing longs with Tag target and type hints")
+    void testLongsTagWithHint() {
+        qt().forAll(longs().all()).check(value -> checkSameLong(value, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing longs with NumberNBT target and type hints")
-    void testLongsNumberNBTWithHint() {
-        qt().forAll(longs().all()).check(value -> checkSameLong(value, NumberNBT.class, true));
+    @DisplayName("Test serializing and deserializing longs with NumericTag target and type hints")
+    void testLongsNumericTagWithHint() {
+        qt().forAll(longs().all()).check(value -> checkSameLong(value, NumericTag.class, true));
     }
 
     // ===================
     // Floats
     // ===================
-    private boolean checkSameFloat(float value, @Nullable Class<? extends INBT> targetClass) {
-        FloatNBT nbt = FloatNBT.valueOf(value);
+    private boolean checkSameFloat(float value, @Nullable Class<? extends Tag> targetClass) {
+        FloatTag nbt = FloatTag.valueOf(value);
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, false);
         if (value == Math.floor(value) && value >= Long.MIN_VALUE && value <= Long.MAX_VALUE) {
             //If we are an integer float check the proper type
             if (value < Integer.MIN_VALUE || value > Integer.MAX_VALUE) {
-                return LongNBT.valueOf((long) value).equals(sanitized);
+                return LongTag.valueOf((long) value).equals(sanitized);
             } else if (value < Short.MIN_VALUE || value > Short.MAX_VALUE) {
-                return IntNBT.valueOf((int) value).equals(sanitized);
+                return IntTag.valueOf((int) value).equals(sanitized);
             } else if (value < Byte.MIN_VALUE || value > Byte.MAX_VALUE) {
-                return ShortNBT.valueOf((short) value).equals(sanitized);
+                return ShortTag.valueOf((short) value).equals(sanitized);
             }
-            return ByteNBT.valueOf((byte) value).equals(sanitized);
+            return ByteTag.valueOf((byte) value).equals(sanitized);
         }
         return nbt.equals(sanitized);
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing floats with FloatNBT target and no hints")
+    @DisplayName("Test serializing and deserializing floats with FloatTag target and no hints")
     void testFloats() {
-        qt().forAll(anyFloat()).as(FloatNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
+        qt().forAll(anyFloat()).as(FloatTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing floats with INBT target and no hints")
-    void testFloatsINBT() {
-        qt().forAll(anyFloat()).check(value -> checkSameFloat(value, INBT.class));
+    @DisplayName("Test serializing and deserializing floats with Tag target and no hints")
+    void testFloatsTag() {
+        qt().forAll(anyFloat()).check(value -> checkSameFloat(value, Tag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing floats with NumberNBT target and no hints")
-    void testFloatsNumberNBT() {
-        qt().forAll(anyFloat()).check(value -> checkSameFloat(value, NumberNBT.class));
+    @DisplayName("Test serializing and deserializing floats with NumericTag target and no hints")
+    void testFloatsNumericTag() {
+        qt().forAll(anyFloat()).check(value -> checkSameFloat(value, NumericTag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing floats with FloatNBT target and type hints")
+    @DisplayName("Test serializing and deserializing floats with FloatTag target and type hints")
     void testFloatsWithHint() {
-        qt().forAll(anyFloat()).as(FloatNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
+        qt().forAll(anyFloat()).as(FloatTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing floats with INBT target and type hints")
-    void testFloatsINBTWithHint() {
-        qt().forAll(anyFloat()).as(FloatNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, true));
+    @DisplayName("Test serializing and deserializing floats with Tag target and type hints")
+    void testFloatsTagWithHint() {
+        qt().forAll(anyFloat()).as(FloatTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing floats with NumberNBT target and type hints")
-    void testFloatsNumberNBTWithHint() {
-        qt().forAll(anyFloat()).as(FloatNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumberNBT.class, true));
+    @DisplayName("Test serializing and deserializing floats with NumericTag target and type hints")
+    void testFloatsNumericTagWithHint() {
+        qt().forAll(anyFloat()).as(FloatTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumericTag.class, true));
     }
 
     // ===================
     // Doubles
     // ===================
-    private boolean checkSameDouble(double value, @Nullable Class<? extends INBT> targetClass) {
-        DoubleNBT nbt = DoubleNBT.valueOf(value);
+    private boolean checkSameDouble(double value, @Nullable Class<? extends Tag> targetClass) {
+        DoubleTag nbt = DoubleTag.valueOf(value);
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, false);
         if (value == Math.floor(value) && value >= Long.MIN_VALUE && value <= Long.MAX_VALUE) {
             //If we are an integer double-check the proper type
             if (value < Integer.MIN_VALUE || value > Integer.MAX_VALUE) {
-                return LongNBT.valueOf((long) value).equals(sanitized);
+                return LongTag.valueOf((long) value).equals(sanitized);
             } else if (value < Short.MIN_VALUE || value > Short.MAX_VALUE) {
-                return IntNBT.valueOf((int) value).equals(sanitized);
+                return IntTag.valueOf((int) value).equals(sanitized);
             } else if (value < Byte.MIN_VALUE || value > Byte.MAX_VALUE) {
-                return ShortNBT.valueOf((short) value).equals(sanitized);
+                return ShortTag.valueOf((short) value).equals(sanitized);
             }
-            return ByteNBT.valueOf((byte) value).equals(sanitized);
+            return ByteTag.valueOf((byte) value).equals(sanitized);
         }
         if (value < -Float.MAX_VALUE || value > Float.MAX_VALUE) {
             return nbt.equals(sanitized);
         }
-        return FloatNBT.valueOf((float) value).equals(sanitized);
+        return FloatTag.valueOf((float) value).equals(sanitized);
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing doubles with DoubleNBT target and no hints")
+    @DisplayName("Test serializing and deserializing doubles with DoubleTag target and no hints")
     void testDoubles() {
-        qt().forAll(anyDouble()).as(DoubleNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
+        qt().forAll(anyDouble()).as(DoubleTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing doubles with INBT target and no hints")
-    void testDoublesINBT() {
-        qt().forAll(anyDouble()).check(value -> checkSameDouble(value, INBT.class));
+    @DisplayName("Test serializing and deserializing doubles with Tag target and no hints")
+    void testDoublesTag() {
+        qt().forAll(anyDouble()).check(value -> checkSameDouble(value, Tag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing doubles with NumberNBT target and no hints")
-    void testDoublesNumberNBT() {
-        qt().forAll(anyDouble()).check(value -> checkSameDouble(value, NumberNBT.class));
+    @DisplayName("Test serializing and deserializing doubles with NumericTag target and no hints")
+    void testDoublesNumericTag() {
+        qt().forAll(anyDouble()).check(value -> checkSameDouble(value, NumericTag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing doubles with DoubleNBT target and type hints")
+    @DisplayName("Test serializing and deserializing doubles with DoubleTag target and type hints")
     void testDoublesWithHint() {
-        qt().forAll(anyDouble()).as(DoubleNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
+        qt().forAll(anyDouble()).as(DoubleTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing doubles with INBT target and type hints")
-    void testDoublesINBTWithHint() {
-        qt().forAll(anyDouble()).as(DoubleNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, true));
+    @DisplayName("Test serializing and deserializing doubles with Tag target and type hints")
+    void testDoublesTagWithHint() {
+        qt().forAll(anyDouble()).as(DoubleTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing doubles with NumberNBT target and type hints")
-    void testDoublesNumberNBTWithHint() {
-        qt().forAll(anyDouble()).as(DoubleNBT::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumberNBT.class, true));
+    @DisplayName("Test serializing and deserializing doubles with NumericTag target and type hints")
+    void testDoublesNumericTagWithHint() {
+        qt().forAll(anyDouble()).as(DoubleTag::valueOf).check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, NumericTag.class, true));
     }
 
     // ===================
     // Strings
     // ===================
     @Test
-    @DisplayName("Test serializing and deserializing strings with StringNBT target and no hints")
+    @DisplayName("Test serializing and deserializing strings with StringTag target and no hints")
     void testStrings() {
-        qt().forAll(strings().ascii().ofLengthBetween(0, 15)).as(StringNBT::valueOf)
+        qt().forAll(strings().ascii().ofLengthBetween(0, 15)).as(StringTag::valueOf)
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing strings with INBT target and no hints")
-    void testStringsINBT() {
-        qt().forAll(strings().ascii().ofLengthBetween(0, 15)).as(StringNBT::valueOf)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, false));
+    @DisplayName("Test serializing and deserializing strings with Tag target and no hints")
+    void testStringsTag() {
+        qt().forAll(strings().ascii().ofLengthBetween(0, 15)).as(StringTag::valueOf)
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing strings with StringNBT target and type hints")
+    @DisplayName("Test serializing and deserializing strings with StringTag target and type hints")
     void testStringsWithHint() {
-        qt().forAll(strings().ascii().ofLengthBetween(0, 15)).as(StringNBT::valueOf)
+        qt().forAll(strings().ascii().ofLengthBetween(0, 15)).as(StringTag::valueOf)
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing strings with INBT target and type hints")
-    void testStringsINBTWithHint() {
-        qt().forAll(strings().ascii().ofLengthBetween(0, 15)).as(StringNBT::valueOf)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, true));
+    @DisplayName("Test serializing and deserializing strings with Tag target and type hints")
+    void testStringsTagWithHint() {
+        qt().forAll(strings().ascii().ofLengthBetween(0, 15)).as(StringTag::valueOf)
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, true));
     }
 
     // ===================
     // Byte Arrays
     // ===================
-    private boolean checkSameByteArray(ByteArrayNBT nbt, @Nullable Class<? extends INBT> targetClass) {
+    private boolean checkSameByteArray(ByteArrayTag nbt, @Nullable Class<? extends Tag> targetClass) {
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, false);
         if (nbt.isEmpty()) {
-            if (targetClass == INBT.class) {
-                return sanitized instanceof CompoundNBT && ((CompoundNBT) sanitized).isEmpty();
-            }//CollectionNBT
-            return sanitized instanceof ListNBT && ((ListNBT) sanitized).isEmpty();
+            if (targetClass == Tag.class) {
+                return sanitized instanceof CompoundTag compound && compound.isEmpty();
+            }//CollectionTag
+            return sanitized instanceof ListTag list && list.isEmpty();
         }
         return nbt.equals(sanitized);
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing byte arrays with ByteArrayNBT target and no hints")
+    @DisplayName("Test serializing and deserializing byte arrays with ByteArrayTag target and no hints")
     void testByteArrays() {
-        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayNBT::new)
+        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayTag::new)
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing byte arrays with INBT target and no hints")
-    void testByteArraysINBT() {
-        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayNBT::new).check(nbt -> checkSameByteArray(nbt, INBT.class));
+    @DisplayName("Test serializing and deserializing byte arrays with Tag target and no hints")
+    void testByteArraysTag() {
+        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayTag::new).check(nbt -> checkSameByteArray(nbt, Tag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing byte arrays with CollectionNBT target and no hints")
-    void testByteArraysCollectionNBT() {
-        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayNBT::new).check(nbt -> checkSameByteArray(nbt, CollectionNBT.class));
+    @DisplayName("Test serializing and deserializing byte arrays with CollectionTag target and no hints")
+    void testByteArraysCollectionTag() {
+        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayTag::new).check(nbt -> checkSameByteArray(nbt, CollectionTag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing byte arrays with ByteArrayNBT target and type hints")
+    @DisplayName("Test serializing and deserializing byte arrays with ByteArrayTag target and type hints")
     void testByteArraysWithHint() {
-        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayNBT::new)
+        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayTag::new)
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing byte arrays with INBT target and type hints")
-    void testByteArraysINBTWithHint() {
-        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayNBT::new)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, true));
+    @DisplayName("Test serializing and deserializing byte arrays with Tag target and type hints")
+    void testByteArraysTagWithHint() {
+        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayTag::new)
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing byte arrays with CollectionNBT target and type hints")
-    void testByteArraysCollectionNBTWithHint() {
-        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayNBT::new)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, CollectionNBT.class, true));
+    @DisplayName("Test serializing and deserializing byte arrays with CollectionTag target and type hints")
+    void testByteArraysCollectionTagWithHint() {
+        qt().forAll(lists().of(allBytes()).ofSizeBetween(0, 15)).as(ByteArrayTag::new)
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, CollectionTag.class, true));
     }
 
     // ===================
     // Integer Arrays
     // ===================
-    private boolean checkSameIntArray(List<Integer> ints, @Nullable Class<? extends INBT> targetClass) {
-        IntArrayNBT nbt = new IntArrayNBT(ints);
+    private boolean checkSameIntArray(List<Integer> ints, @Nullable Class<? extends Tag> targetClass) {
+        IntArrayTag nbt = new IntArrayTag(ints);
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, false);
         if (ints.isEmpty()) {
-            if (targetClass == INBT.class) {
-                return sanitized instanceof CompoundNBT && ((CompoundNBT) sanitized).isEmpty();
-            }//CollectionNBT
-            return sanitized instanceof ListNBT && ((ListNBT) sanitized).isEmpty();
+            if (targetClass == Tag.class) {
+                return sanitized instanceof CompoundTag compound && compound.isEmpty();
+            }//CollectionTag
+            return sanitized instanceof ListTag list && list.isEmpty();
         } else if (ints.stream().allMatch(value -> value >= Byte.MIN_VALUE && value <= Byte.MAX_VALUE)) {
-            ByteArrayNBT expected = new ByteArrayNBT(ints.stream().map(Integer::byteValue).collect(Collectors.toList()));
+            ByteArrayTag expected = new ByteArrayTag(ints.stream().map(Integer::byteValue).toList());
             return expected.equals(sanitized);
         } else if (ints.stream().allMatch(value -> value >= Short.MIN_VALUE && value <= Short.MAX_VALUE)) {
-            ListNBT expected = ints.stream().map(i -> ShortNBT.valueOf(i.shortValue())).collect(Collectors.toCollection(ListNBT::new));
+            ListTag expected = ints.stream().map(i -> ShortTag.valueOf(i.shortValue())).collect(Collectors.toCollection(ListTag::new));
             return expected.equals(sanitized);
         }
         return nbt.equals(sanitized);
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing int arrays with IntArrayNBT target and no hints")
+    @DisplayName("Test serializing and deserializing int arrays with IntArrayTag target and no hints")
     void testIntArrays() {
-        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).as(IntArrayNBT::new)
+        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).as(IntArrayTag::new)
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing int arrays with INBT target and no hints")
-    void testIntArraysINBT() {
-        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).check(ints -> checkSameIntArray(ints, INBT.class));
+    @DisplayName("Test serializing and deserializing int arrays with Tag target and no hints")
+    void testIntArraysTag() {
+        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).check(ints -> checkSameIntArray(ints, Tag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing int arrays with CollectionNBT target and no hints")
-    void testIntArraysCollectionNBT() {
-        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).check(ints -> checkSameIntArray(ints, CollectionNBT.class));
+    @DisplayName("Test serializing and deserializing int arrays with CollectionTag target and no hints")
+    void testIntArraysCollectionTag() {
+        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).check(ints -> checkSameIntArray(ints, CollectionTag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing int arrays with IntArrayNBT target and type hints")
+    @DisplayName("Test serializing and deserializing int arrays with IntArrayTag target and type hints")
     void testIntArraysWithHint() {
-        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).as(IntArrayNBT::new)
+        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).as(IntArrayTag::new)
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing int arrays with INBT target and type hints")
-    void testIntArraysINBTWithHint() {
-        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).as(IntArrayNBT::new)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, true));
+    @DisplayName("Test serializing and deserializing int arrays with Tag target and type hints")
+    void testIntArraysTagWithHint() {
+        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).as(IntArrayTag::new)
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing int arrays with CollectionNBT target and type hints")
-    void testIntArraysCollectionNBTWithHint() {
-        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).as(IntArrayNBT::new)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, CollectionNBT.class, true));
+    @DisplayName("Test serializing and deserializing int arrays with CollectionTag target and type hints")
+    void testIntArraysCollectionTagWithHint() {
+        qt().forAll(lists().of(integers().all()).ofSizeBetween(0, 15)).as(IntArrayTag::new)
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, CollectionTag.class, true));
     }
 
     // ===================
     // Long Arrays
     // ===================
-    private boolean checkSameLongArray(List<Long> longs, @Nullable Class<? extends INBT> targetClass) {
-        LongArrayNBT nbt = new LongArrayNBT(longs);
+    private boolean checkSameLongArray(List<Long> longs, @Nullable Class<? extends Tag> targetClass) {
+        LongArrayTag nbt = new LongArrayTag(longs);
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, false);
         if (longs.isEmpty()) {
-            if (targetClass == INBT.class) {
-                return sanitized instanceof CompoundNBT && ((CompoundNBT) sanitized).isEmpty();
-            }//CollectionNBT
-            return sanitized instanceof ListNBT && ((ListNBT) sanitized).isEmpty();
+            if (targetClass == Tag.class) {
+                return sanitized instanceof CompoundTag compound && compound.isEmpty();
+            }//CollectionTag
+            return sanitized instanceof ListTag list && list.isEmpty();
         } else if (longs.stream().allMatch(value -> value >= Byte.MIN_VALUE && value <= Byte.MAX_VALUE)) {
-            ByteArrayNBT expected = new ByteArrayNBT(longs.stream().map(Long::byteValue).collect(Collectors.toList()));
+            ByteArrayTag expected = new ByteArrayTag(longs.stream().map(Long::byteValue).toList());
             return expected.equals(sanitized);
         } else if (longs.stream().allMatch(value -> value >= Short.MIN_VALUE && value <= Short.MAX_VALUE)) {
-            ListNBT expected = longs.stream().map(i -> ShortNBT.valueOf(i.shortValue())).collect(Collectors.toCollection(ListNBT::new));
+            ListTag expected = longs.stream().map(i -> ShortTag.valueOf(i.shortValue())).collect(Collectors.toCollection(ListTag::new));
             return expected.equals(sanitized);
         } else if (longs.stream().allMatch(value -> value >= Integer.MIN_VALUE && value <= Integer.MAX_VALUE)) {
-            IntArrayNBT expected = new IntArrayNBT(longs.stream().map(Long::intValue).collect(Collectors.toList()));
+            IntArrayTag expected = new IntArrayTag(longs.stream().map(Long::intValue).toList());
             return expected.equals(sanitized);
         }
         return getExpected(longs).equals(sanitized);
     }
 
-    private LongArrayNBT getExpected(List<Long> longs) {
+    private LongArrayTag getExpected(List<Long> longs) {
         //Adjust for floating point accuracy as needed
         if (longs.stream().anyMatch(value -> value != (long) (double) value)) {
-            return new LongArrayNBT(longs.stream().map(v -> (long) (double) v).collect(Collectors.toList()));
+            return new LongArrayTag(longs.stream().map(v -> (long) (double) v).toList());
         }
-        return new LongArrayNBT(longs);
+        return new LongArrayTag(longs);
     }
 
-    private boolean checkSameLongArray(List<Long> longs, @Nullable Class<? extends INBT> targetClass, boolean includeHints) {
-        LongArrayNBT nbt = new LongArrayNBT(longs);
+    private boolean checkSameLongArray(List<Long> longs, @Nullable Class<? extends Tag> targetClass, boolean includeHints) {
+        LongArrayTag nbt = new LongArrayTag(longs);
         Object sanitized = CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, targetClass, includeHints);
         return getExpected(longs).equals(sanitized);
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing long arrays with LongArrayNBT target and no hints")
+    @DisplayName("Test serializing and deserializing long arrays with LongArrayTag target and no hints")
     void testLongArrays() {
         qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing long arrays with INBT target and no hints")
-    void testLongArraysINBT() {
-        qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, INBT.class));
+    @DisplayName("Test serializing and deserializing long arrays with Tag target and no hints")
+    void testLongArraysTag() {
+        qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, Tag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing long arrays with CollectionNBT target and no hints")
-    void testLongArraysCollectionNBT() {
-        qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, CollectionNBT.class));
+    @DisplayName("Test serializing and deserializing long arrays with CollectionTag target and no hints")
+    void testLongArraysCollectionTag() {
+        qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, CollectionTag.class));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing long arrays with LongArrayNBT target and type hints")
+    @DisplayName("Test serializing and deserializing long arrays with LongArrayTag target and type hints")
     void testLongArraysWithHint() {
         qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing long arrays with INBT target and type hints")
-    void testLongArraysINBTWithHint() {
-        qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, INBT.class, true));
+    @DisplayName("Test serializing and deserializing long arrays with Tag target and type hints")
+    void testLongArraysTagWithHint() {
+        qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing long arrays with CollectionNBT target and type hints")
-    void testLongArraysCollectionNBTWithHint() {
-        qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, CollectionNBT.class, true));
+    @DisplayName("Test serializing and deserializing long arrays with CollectionTag target and type hints")
+    void testLongArraysCollectionTagWithHint() {
+        qt().forAll(lists().of(longs().all()).ofSizeBetween(0, 15)).check(longs -> checkSameLongArray(longs, CollectionTag.class, true));
     }
 
     // ===================
     // Lists
     // ===================
-    private ListNBT fromArray(INBT... elements) {
-        ListNBT nbt = new ListNBT();
+    private ListTag fromArray(Tag... elements) {
+        ListTag nbt = new ListTag();
         Collections.addAll(nbt, elements);
         return nbt;
     }
 
-    private ListNBT fromBytes(List<Byte> bytes) {
-        return bytes.stream().map(ByteNBT::valueOf).collect(Collectors.toCollection(ListNBT::new));
+    private ListTag fromBytes(List<Byte> bytes) {
+        return bytes.stream().map(ByteTag::valueOf).collect(Collectors.toCollection(ListTag::new));
     }
 
-    private ListNBT fromShorts(List<Short> shorts) {
-        return shorts.stream().map(ShortNBT::valueOf).collect(Collectors.toCollection(ListNBT::new));
+    private ListTag fromShorts(List<Short> shorts) {
+        return shorts.stream().map(ShortTag::valueOf).collect(Collectors.toCollection(ListTag::new));
     }
 
-    private ListNBT fromInts(List<Integer> ints) {
-        return ints.stream().map(IntNBT::valueOf).collect(Collectors.toCollection(ListNBT::new));
+    private ListTag fromInts(List<Integer> ints) {
+        return ints.stream().map(IntTag::valueOf).collect(Collectors.toCollection(ListTag::new));
     }
 
-    private ListNBT fromLongs(List<Long> longs) {
-        return longs.stream().map(LongNBT::valueOf).collect(Collectors.toCollection(ListNBT::new));
+    private ListTag fromLongs(List<Long> longs) {
+        return longs.stream().map(LongTag::valueOf).collect(Collectors.toCollection(ListTag::new));
     }
 
-    private ListNBT fromStrings(List<String> strings) {
-        return strings.stream().map(StringNBT::valueOf).collect(Collectors.toCollection(ListNBT::new));
+    private ListTag fromStrings(List<String> strings) {
+        return strings.stream().map(StringTag::valueOf).collect(Collectors.toCollection(ListTag::new));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing string lists with ListNBT target and no hints")
+    @DisplayName("Test serializing and deserializing string lists with ListTag target and no hints")
     void testStringList() {
         qt().forAll(lists().of(strings().ascii().ofLengthBetween(0, 15)).ofSizeBetween(1, 15)).as(this::fromStrings)
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing string lists with INBT target and no hints")
-    void testStringListINBT() {
+    @DisplayName("Test serializing and deserializing string lists with Tag target and no hints")
+    void testStringListTag() {
         qt().forAll(lists().of(strings().ascii().ofLengthBetween(0, 15)).ofSizeBetween(1, 15)).as(this::fromStrings)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, false));
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing string lists with CollectionNBT target and no hints")
-    void testStringListCollectionNBT() {
+    @DisplayName("Test serializing and deserializing string lists with CollectionTag target and no hints")
+    void testStringListCollectionTag() {
         qt().forAll(lists().of(strings().ascii().ofLengthBetween(0, 15)).ofSizeBetween(1, 15)).as(this::fromStrings)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, CollectionNBT.class, false));
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, CollectionTag.class, false));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing string lists with ListNBT target and type hints")
+    @DisplayName("Test serializing and deserializing string lists with ListTag target and type hints")
     void testStringListWithHint() {
         qt().forAll(lists().of(strings().ascii().ofLengthBetween(0, 15)).ofSizeBetween(1, 15)).as(this::fromStrings)
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing string lists with INBT target and type hints")
-    void testStringListINBTWithHint() {
+    @DisplayName("Test serializing and deserializing string lists with Tag target and type hints")
+    void testStringListTagWithHint() {
         qt().forAll(lists().of(strings().ascii().ofLengthBetween(0, 15)).ofSizeBetween(1, 15)).as(this::fromStrings)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, INBT.class, true));
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, Tag.class, true));
     }
 
     @Test
-    @DisplayName("Test serializing and deserializing string lists with CollectionNBT target and type hints")
-    void testStringListCollectionNBTWithHint() {
+    @DisplayName("Test serializing and deserializing string lists with CollectionTag target and type hints")
+    void testStringListCollectionTagWithHint() {
         qt().forAll(lists().of(strings().ascii().ofLengthBetween(0, 15)).ofSizeBetween(1, 15)).as(this::fromStrings)
-              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, CollectionNBT.class, true));
+              .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, CollectionTag.class, true));
     }
 
     @Test
@@ -686,7 +686,7 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
         qt().forAll(
                     allBytes(),
                     onlyShorts()
-              ).as((b, s) -> fromArray(ShortNBT.valueOf(b), ShortNBT.valueOf(s)))
+              ).as((b, s) -> fromArray(ShortTag.valueOf(b), ShortTag.valueOf(s)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
@@ -696,7 +696,7 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
         qt().forAll(
                     allBytes(),
                     onlyInts()
-              ).as((b, i) -> fromArray(IntNBT.valueOf(b), IntNBT.valueOf(i)))
+              ).as((b, i) -> fromArray(IntTag.valueOf(b), IntTag.valueOf(i)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
@@ -707,8 +707,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
               allBytes(),
               onlyLongs()
         ).check((b, l) -> {
-            ListNBT nbt = fromArray(LongNBT.valueOf(b), LongNBT.valueOf(l));
-            ListNBT expected = fromArray(LongNBT.valueOf(b), getExpected(l));
+            ListTag nbt = fromArray(LongTag.valueOf(b), LongTag.valueOf(l));
+            ListTag expected = fromArray(LongTag.valueOf(b), getExpected(l));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -716,14 +716,14 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @Test
     @DisplayName("Test serializing and deserializing lists that would be decoded as a byte plus a float")
     void testListByteToFloat() {
-        qt().forAll(allBytes()).as(b -> fromArray(FloatNBT.valueOf(b), FloatNBT.valueOf(Float.MAX_VALUE)))
+        qt().forAll(allBytes()).as(b -> fromArray(FloatTag.valueOf(b), FloatTag.valueOf(Float.MAX_VALUE)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
     @DisplayName("Test serializing and deserializing lists that would be decoded as a byte plus a double")
     void testListByteToDouble() {
-        qt().forAll(allBytes()).as(b -> fromArray(DoubleNBT.valueOf(b), DoubleNBT.valueOf(Double.MAX_VALUE)))
+        qt().forAll(allBytes()).as(b -> fromArray(DoubleTag.valueOf(b), DoubleTag.valueOf(Double.MAX_VALUE)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
@@ -733,7 +733,7 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
         qt().forAll(
                     onlyShorts(),
                     onlyInts()
-              ).as((s, i) -> fromArray(IntNBT.valueOf(s), IntNBT.valueOf(i)))
+              ).as((s, i) -> fromArray(IntTag.valueOf(s), IntTag.valueOf(i)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
@@ -744,8 +744,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
               onlyShorts(),
               onlyLongs()
         ).check((s, l) -> {
-            ListNBT nbt = fromArray(LongNBT.valueOf(s), LongNBT.valueOf(l));
-            ListNBT expected = fromArray(LongNBT.valueOf(s), getExpected(l));
+            ListTag nbt = fromArray(LongTag.valueOf(s), LongTag.valueOf(l));
+            ListTag expected = fromArray(LongTag.valueOf(s), getExpected(l));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -753,14 +753,14 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @Test
     @DisplayName("Test serializing and deserializing lists that would be decoded as a short plus a float")
     void testListShortToFloat() {
-        qt().forAll(onlyShorts()).as(s -> fromArray(FloatNBT.valueOf(s), FloatNBT.valueOf(Float.MAX_VALUE)))
+        qt().forAll(onlyShorts()).as(s -> fromArray(FloatTag.valueOf(s), FloatTag.valueOf(Float.MAX_VALUE)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
     @DisplayName("Test serializing and deserializing lists that would be decoded as a short plus a double")
     void testListShortToDouble() {
-        qt().forAll(onlyShorts()).as(s -> fromArray(DoubleNBT.valueOf(s), DoubleNBT.valueOf(Double.MAX_VALUE)))
+        qt().forAll(onlyShorts()).as(s -> fromArray(DoubleTag.valueOf(s), DoubleTag.valueOf(Double.MAX_VALUE)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
@@ -771,8 +771,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
               onlyInts(),
               onlyLongs()
         ).check((i, l) -> {
-            ListNBT nbt = fromArray(LongNBT.valueOf(i), LongNBT.valueOf(l));
-            ListNBT expected = fromArray(LongNBT.valueOf(i), getExpected(l));
+            ListTag nbt = fromArray(LongTag.valueOf(i), LongTag.valueOf(l));
+            ListTag expected = fromArray(LongTag.valueOf(i), getExpected(l));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -780,35 +780,35 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @Test
     @DisplayName("Test serializing and deserializing lists that would be decoded as an int plus a float")
     void testListIntToFloat() {
-        qt().forAll(onlyInts()).as(i -> fromArray(FloatNBT.valueOf(i), FloatNBT.valueOf(Float.MAX_VALUE)))
+        qt().forAll(onlyInts()).as(i -> fromArray(FloatTag.valueOf(i), FloatTag.valueOf(Float.MAX_VALUE)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
     @DisplayName("Test serializing and deserializing lists that would be decoded as an int plus a double")
     void testListIntToDouble() {
-        qt().forAll(onlyInts()).as(i -> fromArray(DoubleNBT.valueOf(i), DoubleNBT.valueOf(Double.MAX_VALUE)))
+        qt().forAll(onlyInts()).as(i -> fromArray(DoubleTag.valueOf(i), DoubleTag.valueOf(Double.MAX_VALUE)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
     @DisplayName("Test serializing and deserializing lists that would be decoded as a long plus a float")
     void testListLongToFloat() {
-        qt().forAll(onlyLongs()).as(l -> fromArray(FloatNBT.valueOf(l), FloatNBT.valueOf(Float.MAX_VALUE)))
+        qt().forAll(onlyLongs()).as(l -> fromArray(FloatTag.valueOf(l), FloatTag.valueOf(Float.MAX_VALUE)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
     @DisplayName("Test serializing and deserializing lists that would be decoded as a long plus a double")
     void testListLongToDouble() {
-        qt().forAll(onlyLongs()).as(l -> fromArray(DoubleNBT.valueOf(l), DoubleNBT.valueOf(Double.MAX_VALUE)))
+        qt().forAll(onlyLongs()).as(l -> fromArray(DoubleTag.valueOf(l), DoubleTag.valueOf(Double.MAX_VALUE)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
     @Test
     @DisplayName("Test serializing and deserializing lists that would be decoded as a float plus a double")
     void testListFloatToDouble() {
-        qt().forAll(floats().between(Long.MAX_VALUE + 1F, Float.MAX_VALUE)).as(f -> fromArray(DoubleNBT.valueOf(f), DoubleNBT.valueOf(Double.MAX_VALUE)))
+        qt().forAll(floats().between(Long.MAX_VALUE + 1F, Float.MAX_VALUE)).as(f -> fromArray(DoubleTag.valueOf(f), DoubleTag.valueOf(Double.MAX_VALUE)))
               .check(nbt -> CCArgumentWrapperTestHelper.checkSame(nbt, null, false));
     }
 
@@ -829,8 +829,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
               lists().of(allBytes()).ofSizeBetween(1, 15),
               lists().of(onlyInts()).ofSizeBetween(1, 15)
         ).check((bytes, ints) -> {
-            ListNBT nbt = fromArray(fromBytes(bytes), fromInts(ints));
-            ListNBT expected = fromArray(new IntArrayNBT(bytes.stream().mapToInt(Number::intValue).toArray()), new IntArrayNBT(ints));
+            ListTag nbt = fromArray(fromBytes(bytes), fromInts(ints));
+            ListTag expected = fromArray(new IntArrayTag(bytes.stream().mapToInt(Number::intValue).toArray()), new IntArrayTag(ints));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -842,8 +842,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
               lists().of(allBytes()).ofSizeBetween(1, 15),
               lists().of(onlyLongs()).ofSizeBetween(1, 15)
         ).check((bytes, longs) -> {
-            ListNBT nbt = fromArray(fromBytes(bytes), fromLongs(longs));
-            ListNBT expected = fromArray(new LongArrayNBT(bytes.stream().mapToLong(Number::longValue).toArray()), getExpected(longs));
+            ListTag nbt = fromArray(fromBytes(bytes), fromLongs(longs));
+            ListTag expected = fromArray(new LongArrayTag(bytes.stream().mapToLong(Number::longValue).toArray()), getExpected(longs));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -855,8 +855,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
               lists().of(onlyShorts()).ofSizeBetween(1, 15),
               lists().of(onlyInts()).ofSizeBetween(1, 15)
         ).check((shorts, ints) -> {
-            ListNBT nbt = fromArray(fromShorts(shorts), fromInts(ints));
-            ListNBT expected = fromArray(new IntArrayNBT(shorts.stream().mapToInt(Number::intValue).toArray()), new IntArrayNBT(ints));
+            ListTag nbt = fromArray(fromShorts(shorts), fromInts(ints));
+            ListTag expected = fromArray(new IntArrayTag(shorts.stream().mapToInt(Number::intValue).toArray()), new IntArrayTag(ints));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -868,8 +868,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
               lists().of(onlyShorts()).ofSizeBetween(1, 15),
               lists().of(onlyLongs()).ofSizeBetween(1, 15)
         ).check((shorts, longs) -> {
-            ListNBT nbt = fromArray(fromShorts(shorts), fromLongs(longs));
-            ListNBT expected = fromArray(new LongArrayNBT(shorts.stream().mapToLong(Number::longValue).toArray()), getExpected(longs));
+            ListTag nbt = fromArray(fromShorts(shorts), fromLongs(longs));
+            ListTag expected = fromArray(new LongArrayTag(shorts.stream().mapToLong(Number::longValue).toArray()), getExpected(longs));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -881,8 +881,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
               lists().of(onlyInts()).ofSizeBetween(1, 15),
               lists().of(onlyLongs()).ofSizeBetween(1, 15)
         ).check((ints, longs) -> {
-            ListNBT nbt = fromArray(fromInts(ints), fromLongs(longs));
-            ListNBT expected = fromArray(new LongArrayNBT(ints.stream().mapToLong(Number::longValue).toArray()), getExpected(longs));
+            ListTag nbt = fromArray(fromInts(ints), fromLongs(longs));
+            ListTag expected = fromArray(new LongArrayTag(ints.stream().mapToLong(Number::longValue).toArray()), getExpected(longs));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -891,8 +891,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @DisplayName("Test serializing and deserializing lists of lists that would create the inner ones as byte arrays plus an empty list")
     void testListByteArrayPlusEmpty() {
         qt().forAll(lists().of(allBytes()).ofSizeBetween(1, 15)).check(bytes -> {
-            ListNBT nbt = fromArray(fromBytes(bytes), new ListNBT());
-            ListNBT expected = fromArray(new ByteArrayNBT(bytes), new ByteArrayNBT(new byte[0]));
+            ListTag nbt = fromArray(fromBytes(bytes), new ListTag());
+            ListTag expected = fromArray(new ByteArrayTag(bytes), new ByteArrayTag(new byte[0]));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -901,8 +901,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @DisplayName("Test serializing and deserializing lists of lists that would create the inner ones as an empty compound plus a byte array")
     void testListEmptyPlusByteArray() {
         qt().forAll(lists().of(allBytes()).ofSizeBetween(1, 15)).check(bytes -> {
-            ListNBT nbt = fromArray(new ListNBT(), fromBytes(bytes));
-            ListNBT expected = fromArray(new ByteArrayNBT(new byte[0]), new ByteArrayNBT(bytes));
+            ListTag nbt = fromArray(new ListTag(), fromBytes(bytes));
+            ListTag expected = fromArray(new ByteArrayTag(new byte[0]), new ByteArrayTag(bytes));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -911,8 +911,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @DisplayName("Test serializing and deserializing lists of lists that would create the inner ones as int arrays plus an empty list")
     void testListIntArrayPlusEmpty() {
         qt().forAll(lists().of(onlyInts()).ofSizeBetween(1, 15)).check(ints -> {
-            ListNBT nbt = fromArray(fromInts(ints), new ListNBT());
-            ListNBT expected = fromArray(new IntArrayNBT(ints), new IntArrayNBT(new int[0]));
+            ListTag nbt = fromArray(fromInts(ints), new ListTag());
+            ListTag expected = fromArray(new IntArrayTag(ints), new IntArrayTag(new int[0]));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -921,8 +921,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @DisplayName("Test serializing and deserializing lists of lists that would create the inner ones as an empty compound plus an int array")
     void testListEmptyPlusIntArray() {
         qt().forAll(lists().of(onlyInts()).ofSizeBetween(1, 15)).check(ints -> {
-            ListNBT nbt = fromArray(new ListNBT(), fromInts(ints));
-            ListNBT expected = fromArray(new IntArrayNBT(new int[0]), new IntArrayNBT(ints));
+            ListTag nbt = fromArray(new ListTag(), fromInts(ints));
+            ListTag expected = fromArray(new IntArrayTag(new int[0]), new IntArrayTag(ints));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -931,8 +931,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @DisplayName("Test serializing and deserializing lists of lists that would create the inner ones as long arrays plus an empty list")
     void testListLongArrayPlusEmpty() {
         qt().forAll(lists().of(onlyLongs()).ofSizeBetween(1, 15)).check(longs -> {
-            ListNBT nbt = fromArray(fromLongs(longs), new ListNBT());
-            ListNBT expected = fromArray(getExpected(longs), new LongArrayNBT(new long[0]));
+            ListTag nbt = fromArray(fromLongs(longs), new ListTag());
+            ListTag expected = fromArray(getExpected(longs), new LongArrayTag(new long[0]));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -941,8 +941,8 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @DisplayName("Test serializing and deserializing lists of lists that would create the inner ones as an empty compound plus a long array")
     void testListEmptyPlusLongArray() {
         qt().forAll(lists().of(onlyLongs()).ofSizeBetween(1, 15)).check(longs -> {
-            ListNBT nbt = fromArray(new ListNBT(), fromLongs(longs));
-            ListNBT expected = fromArray(new LongArrayNBT(new long[0]), getExpected(longs));
+            ListTag nbt = fromArray(new ListTag(), fromLongs(longs));
+            ListTag expected = fromArray(new LongArrayTag(new long[0]), getExpected(longs));
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
@@ -951,7 +951,7 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
     @DisplayName("Test serializing and deserializing lists of lists that would create the inner ones as an empty compound plus some arbitrary list type (strings)")
     void testListEmptyPlusList() {
         qt().forAll(lists().of(strings().ascii().ofLengthBetween(0, 15)).ofSizeBetween(1, 15)).check(strings -> {
-            ListNBT nbt = fromArray(new ListNBT(), fromStrings(strings));
+            ListTag nbt = fromArray(new ListTag(), fromStrings(strings));
             return CCArgumentWrapperTestHelper.checkSame(nbt, null, false);
         });
     }
@@ -983,15 +983,15 @@ class CCArgumentWrapperPropertyTest implements WithQuickTheories {
               lists().of(onlyLongs()).ofSizeBetween(1, 15),
               lists().of(strings().ascii().ofLengthBetween(0, 15)).ofSizeBetween(1, 15)
         ).check((longs, strings) -> {
-            ListNBT stringListNBT = fromStrings(strings);
-            ListNBT nbt = fromArray(fromLongs(longs), stringListNBT);
-            ListNBT expectedLongs;
+            ListTag stringListTag = fromStrings(strings);
+            ListTag nbt = fromArray(fromLongs(longs), stringListTag);
+            ListTag expectedLongs;
             if (longs.stream().anyMatch(value -> value != (long) (double) value)) {
-                expectedLongs = longs.stream().map(v -> LongNBT.valueOf((long) (double) v)).collect(Collectors.toCollection(ListNBT::new));
+                expectedLongs = longs.stream().map(v -> LongTag.valueOf((long) (double) v)).collect(Collectors.toCollection(ListTag::new));
             } else {
-                expectedLongs = longs.stream().map(LongNBT::valueOf).collect(Collectors.toCollection(ListNBT::new));
+                expectedLongs = longs.stream().map(LongTag::valueOf).collect(Collectors.toCollection(ListTag::new));
             }
-            ListNBT expected = fromArray(expectedLongs, stringListNBT);
+            ListTag expected = fromArray(expectedLongs, stringListTag);
             return expected.equals(CCArgumentWrapperTestHelper.wrapAndSanitize(nbt, null, false));
         });
     }
